# serializer version: 1
# name: test_color_custom[chain_id-1BNA]
  [[1.0 0.1 0.1 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_color_custom[chain_id-4ozs]
  [[0.2 0.3 1.0 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_color_custom[chain_id-8H1B]
  [[0.2 0.3 1.0 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_color_custom[chain_id-8U8W]
  [[0.2 0.3 1.0 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_color_custom[entity_id-1BNA]
  [[1.0 0.1 0.1 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_color_custom[entity_id-4ozs]
  [[0.2 0.3 1.0 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_color_custom[entity_id-8H1B]
  [[0.2 0.3 1.0 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_color_custom[entity_id-8U8W]
  [[0.2 0.3 1.0 1.0]
   [0.8 0.4 0.4 1.0]
   [0.8 0.4 0.4 1.0]
   ...
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]
   [1.0 0.1 0.1 1.0]]
# ---
# name: test_dihedral_rotations[1BNA-NucleicChi]
  [[1.9 3.4 2.6]
   [1.9 3.4 2.4]
   [2.0 3.3 2.4]
   [1.9 3.2 2.5]
   [2.0 3.2 2.3]
   [2.1 3.1 2.3]
   [1.9 3.1 2.3]
   [1.9 3.0 2.4]
   [1.8 3.0 2.4]
   [1.8 2.8 2.4]
   [1.9 2.8 2.3]
   [1.7 2.8 2.4]
   [1.6 2.8 2.5]
   [1.5 2.8 2.6]
   [1.6 3.0 2.6]
   [1.7 3.0 2.5]
   [2.2 3.1 2.1]
   [2.4 3.2 2.2]
   [2.2 3.1 2.0]
   [2.3 3.0 2.1]
   [2.4 2.9 2.3]
   [2.3 2.8 2.2]
   [2.2 2.7 2.3]
   [2.4 2.7 2.1]
   [2.5 2.6 2.1]
   [2.2 2.7 2.0]
   [2.2 2.6 2.2]
   [2.0 2.6 2.2]
   [2.0 2.7 2.2]
   [1.8 2.7 2.2]
   [1.8 2.6 2.2]
   [1.7 2.6 2.1]
   [1.6 2.6 2.1]
   [1.7 2.4 2.0]
   [1.8 2.4 2.0]
   [1.8 2.3 1.9]
   [1.9 2.5 2.0]
   [1.9 2.6 2.1]
   [2.5 2.6 1.9]
   [2.7 2.5 1.9]
   [2.5 2.6 1.8]
   [2.4 2.4 1.9]
   [2.5 2.3 2.0]
   [2.4 2.2 2.0]
   [2.2 2.3 2.0]
   [2.3 2.2 1.9]
   [2.4 2.0 1.9]
   [2.2 2.1 1.9]
   [2.1 2.2 2.0]
   [2.0 2.3 2.0]
   [1.9 2.2 1.9]
   [1.9 2.1 1.8]
   [1.8 2.3 1.8]
   [1.8 2.5 1.9]
   [1.7 2.5 1.9]
   [1.9 2.5 2.0]
   [2.0 2.4 2.0]
   [2.4 1.9 1.8]
   [2.5 1.9 1.8]
   [2.4 2.0 1.6]
   [2.3 1.9 1.8]
   [2.3 1.8 1.9]
   [2.1 1.7 1.9]
   [2.0 1.8 1.8]
   [2.1 1.6 1.7]
   [2.0 1.5 1.7]
   [2.1 1.7 1.6]
   [2.0 1.8 1.7]
   [1.9 1.9 1.7]
   [2.0 2.0 1.7]
   [1.9 2.2 1.7]
   [1.8 2.1 1.6]
   [1.7 2.2 1.5]
   [1.7 2.3 1.5]
   [1.6 2.1 1.5]
   [1.6 1.9 1.5]
   [1.6 1.9 1.4]
   [1.7 1.9 1.6]
   [1.8 2.0 1.6]
   [2.0 1.4 1.6]
   [2.1 1.3 1.7]
   [2.1 1.4 1.5]
   [1.9 1.4 1.6]
   [1.8 1.4 1.7]
   [1.7 1.4 1.7]
   [1.7 1.5 1.7]
   [1.6 1.3 1.6]
   [1.5 1.3 1.6]
   [1.6 1.4 1.5]
   [1.6 1.6 1.6]
   [1.6 1.7 1.5]
   [1.7 1.8 1.5]
   [1.8 1.9 1.4]
   [1.7 1.9 1.4]
   [1.6 1.9 1.2]
   [1.7 2.1 1.2]
   [1.5 1.9 1.2]
   [1.4 1.8 1.2]
   [1.5 1.7 1.3]
   [1.6 1.8 1.4]]
# ---
# name: test_dihedral_rotations[1BNA-NucleicDihedral]
  [[1.9 3.4 2.6]
   [1.9 3.4 2.4]
   [2.0 3.3 2.4]
   [2.0 3.2 2.5]
   [1.9 3.1 2.3]
   [2.0 3.1 2.3]
   [1.9 3.1 2.5]
   [2.0 3.1 2.5]
   [2.0 3.0 2.7]
   [2.1 3.0 2.8]
   [2.2 2.9 2.7]
   [2.0 2.9 2.9]
   [1.9 3.0 2.9]
   [1.9 3.0 3.1]
   [1.8 3.1 2.9]
   [1.9 3.1 2.7]
   [2.0 2.9 2.3]
   [1.9 2.9 2.2]
   [2.0 2.8 2.4]
   [2.1 2.9 2.2]
   [2.1 2.8 2.0]
   [2.2 3.0 1.9]
   [2.1 3.0 1.8]
   [2.2 3.1 2.0]
   [2.3 3.2 2.0]
   [2.0 3.2 2.0]
   [2.0 3.1 1.8]
   [1.9 3.1 1.8]
   [1.8 3.1 1.8]
   [1.7 3.1 1.8]
   [1.7 3.1 1.6]
   [1.6 3.2 1.5]
   [1.5 3.1 1.5]
   [1.7 3.2 1.4]
   [1.8 3.2 1.4]
   [1.9 3.2 1.3]
   [1.9 3.2 1.5]
   [1.8 3.1 1.6]
   [2.3 3.3 1.9]
   [2.3 3.4 2.0]
   [2.2 3.3 1.8]
   [2.5 3.3 1.9]
   [2.6 3.4 1.9]
   [2.7 3.3 2.0]
   [2.7 3.4 2.1]
   [2.6 3.2 2.0]
   [2.7 3.1 1.9]
   [2.7 3.1 2.1]
   [2.7 3.3 2.2]
   [2.6 3.3 2.3]
   [2.7 3.3 2.4]
   [2.8 3.3 2.4]
   [2.7 3.3 2.6]
   [2.5 3.3 2.6]
   [2.5 3.3 2.7]
   [2.4 3.3 2.5]
   [2.5 3.3 2.3]
   [2.8 3.0 1.9]
   [2.7 2.9 1.9]
   [2.9 3.0 2.1]
   [2.9 3.0 1.8]
   [3.0 2.9 1.8]
   [3.0 3.0 1.6]
   [2.9 2.9 1.5]
   [2.9 3.1 1.6]
   [3.0 3.2 1.5]
   [2.8 3.1 1.6]
   [2.8 3.0 1.5]
   [2.6 2.9 1.5]
   [2.6 2.9 1.6]
   [2.4 2.8 1.5]
   [2.5 2.8 1.4]
   [2.4 2.7 1.3]
   [2.3 2.7 1.3]
   [2.5 2.7 1.2]
   [2.6 2.8 1.2]
   [2.6 2.8 1.0]
   [2.6 2.8 1.3]
   [2.6 2.9 1.4]
   [2.9 3.3 1.4]
   [2.8 3.4 1.5]
   [2.8 3.2 1.3]
   [3.0 3.4 1.4]
   [3.1 3.5 1.4]
   [3.2 3.4 1.5]
   [3.1 3.5 1.6]
   [3.2 3.3 1.5]
   [3.3 3.3 1.5]
   [3.1 3.3 1.7]
   [3.2 3.4 1.7]
   [3.1 3.4 1.9]
   [2.9 3.4 1.9]
   [2.9 3.5 2.0]
   [3.0 3.5 2.1]
   [3.0 3.5 2.2]
   [2.9 3.5 2.3]
   [3.1 3.5 2.2]
   [3.2 3.5 2.2]
   [3.2 3.4 2.0]
   [3.1 3.4 2.0]]
# ---
# name: test_dihedral_rotations[1BNA-PeptideChi]
  [[1.9 3.4 2.6]
   [1.9 3.4 2.4]
   [2.0 3.3 2.4]
   [1.9 3.2 2.5]
   [2.0 3.2 2.3]
   [2.1 3.1 2.3]
   [1.9 3.1 2.3]
   [1.9 3.0 2.4]
   [1.8 3.0 2.4]
   [1.8 2.8 2.5]
   [1.9 2.8 2.5]
   [1.7 2.8 2.5]
   [1.6 2.8 2.5]
   [1.5 2.7 2.5]
   [1.6 2.9 2.4]
   [1.7 3.0 2.4]
   [2.2 3.1 2.1]
   [2.4 3.2 2.2]
   [2.2 3.1 2.0]
   [2.3 3.0 2.1]
   [2.4 2.9 2.3]
   [2.3 2.8 2.2]
   [2.2 2.7 2.3]
   [2.4 2.7 2.1]
   [2.5 2.6 2.1]
   [2.2 2.7 2.0]
   [2.2 2.6 2.2]
   [2.0 2.6 2.2]
   [2.0 2.8 2.1]
   [1.8 2.7 2.2]
   [1.8 2.6 2.2]
   [1.7 2.6 2.3]
   [1.6 2.6 2.3]
   [1.7 2.4 2.3]
   [1.8 2.4 2.3]
   [1.9 2.2 2.4]
   [2.0 2.4 2.3]
   [1.9 2.6 2.2]
   [2.5 2.6 1.9]
   [2.7 2.5 1.9]
   [2.5 2.6 1.8]
   [2.4 2.4 1.9]
   [2.5 2.3 2.0]
   [2.4 2.2 2.0]
   [2.2 2.3 2.0]
   [2.3 2.2 1.9]
   [2.4 2.0 1.9]
   [2.2 2.1 1.9]
   [2.1 2.2 2.0]
   [2.0 2.3 2.0]
   [1.9 2.3 2.0]
   [1.9 2.2 2.0]
   [1.8 2.3 2.0]
   [1.8 2.5 1.9]
   [1.7 2.5 1.9]
   [2.0 2.5 1.9]
   [2.1 2.4 1.9]
   [2.4 1.9 1.8]
   [2.5 1.9 1.8]
   [2.4 2.0 1.6]
   [2.3 1.9 1.8]
   [2.3 1.8 1.9]
   [2.1 1.7 1.9]
   [2.0 1.8 1.8]
   [2.1 1.6 1.7]
   [2.0 1.5 1.7]
   [2.1 1.7 1.6]
   [2.0 1.8 1.7]
   [1.9 1.9 1.7]
   [2.0 2.0 1.6]
   [1.9 2.1 1.6]
   [1.8 2.1 1.7]
   [1.7 2.2 1.7]
   [1.7 2.3 1.6]
   [1.6 2.1 1.7]
   [1.6 2.0 1.8]
   [1.5 1.9 1.8]
   [1.7 1.9 1.8]
   [1.8 2.0 1.7]
   [2.0 1.4 1.6]
   [2.1 1.3 1.7]
   [2.1 1.4 1.5]
   [1.9 1.4 1.6]
   [1.8 1.4 1.7]
   [1.7 1.4 1.7]
   [1.7 1.5 1.7]
   [1.6 1.3 1.6]
   [1.5 1.3 1.6]
   [1.6 1.4 1.5]
   [1.6 1.6 1.6]
   [1.6 1.7 1.5]
   [1.8 1.7 1.4]
   [1.8 1.8 1.4]
   [1.7 1.9 1.4]
   [1.6 2.0 1.4]
   [1.7 2.1 1.3]
   [1.5 2.1 1.4]
   [1.4 2.0 1.5]
   [1.4 1.8 1.5]
   [1.6 1.8 1.5]]
# ---
# name: test_dihedral_rotations[1BNA-PeptideDihedral]
  [[1.9 3.4 2.6]
   [1.9 3.4 2.4]
   [2.0 3.3 2.4]
   [1.9 3.2 2.5]
   [2.0 3.2 2.3]
   [2.1 3.1 2.3]
   [1.9 3.1 2.3]
   [1.9 3.0 2.4]
   [1.8 3.0 2.4]
   [1.8 2.8 2.5]
   [1.9 2.8 2.5]
   [1.7 2.8 2.5]
   [1.6 2.8 2.5]
   [1.5 2.7 2.5]
   [1.6 2.9 2.4]
   [1.7 3.0 2.4]
   [2.2 3.1 2.1]
   [2.4 3.2 2.2]
   [2.2 3.1 2.0]
   [2.3 3.0 2.1]
   [2.4 2.9 2.3]
   [2.3 2.8 2.2]
   [2.2 2.7 2.3]
   [2.4 2.7 2.1]
   [2.5 2.6 2.1]
   [2.2 2.7 2.0]
   [2.2 2.6 2.2]
   [2.0 2.6 2.2]
   [2.0 2.8 2.1]
   [1.8 2.7 2.2]
   [1.8 2.6 2.2]
   [1.7 2.6 2.3]
   [1.6 2.6 2.3]
   [1.7 2.4 2.3]
   [1.8 2.4 2.3]
   [1.9 2.2 2.4]
   [2.0 2.4 2.3]
   [1.9 2.6 2.2]
   [2.5 2.6 1.9]
   [2.7 2.5 1.9]
   [2.5 2.6 1.8]
   [2.4 2.4 1.9]
   [2.5 2.3 2.0]
   [2.4 2.2 2.0]
   [2.2 2.3 2.0]
   [2.3 2.2 1.9]
   [2.4 2.0 1.9]
   [2.2 2.1 1.9]
   [2.1 2.2 2.0]
   [2.0 2.3 2.0]
   [1.9 2.3 2.0]
   [1.9 2.2 2.0]
   [1.8 2.3 2.0]
   [1.8 2.5 1.9]
   [1.7 2.5 1.9]
   [2.0 2.5 1.9]
   [2.1 2.4 1.9]
   [2.4 1.9 1.8]
   [2.5 1.9 1.8]
   [2.4 2.0 1.6]
   [2.3 1.9 1.8]
   [2.3 1.8 1.9]
   [2.1 1.7 1.9]
   [2.0 1.8 1.8]
   [2.1 1.6 1.7]
   [2.0 1.5 1.7]
   [2.1 1.7 1.6]
   [2.0 1.8 1.7]
   [1.9 1.9 1.7]
   [2.0 2.0 1.6]
   [1.9 2.1 1.6]
   [1.8 2.1 1.7]
   [1.7 2.2 1.7]
   [1.7 2.3 1.6]
   [1.6 2.1 1.7]
   [1.6 2.0 1.8]
   [1.5 1.9 1.8]
   [1.7 1.9 1.8]
   [1.8 2.0 1.7]
   [2.0 1.4 1.6]
   [2.1 1.3 1.7]
   [2.1 1.4 1.5]
   [1.9 1.4 1.6]
   [1.8 1.4 1.7]
   [1.7 1.4 1.7]
   [1.7 1.5 1.7]
   [1.6 1.3 1.6]
   [1.5 1.3 1.6]
   [1.6 1.4 1.5]
   [1.6 1.6 1.6]
   [1.6 1.7 1.5]
   [1.8 1.7 1.4]
   [1.8 1.8 1.4]
   [1.7 1.9 1.4]
   [1.6 2.0 1.4]
   [1.7 2.1 1.3]
   [1.5 2.1 1.4]
   [1.4 2.0 1.5]
   [1.4 1.8 1.5]
   [1.6 1.8 1.5]]
# ---
# name: test_dihedral_rotations[8H1B-NucleicChi]
  [[ 1.6 -0.1  2.8]
   [ 1.5 -0.1  2.7]
   [ 1.5  0.0  2.6]
   [ 1.5  0.1  2.6]
   [ 1.4 -0.1  2.8]
   [ 1.3 -0.1  2.7]
   [ 1.1 -0.2  2.8]
   [ 1.1 -0.1  2.9]
   [ 1.5 -0.0  2.4]
   [ 1.4  0.1  2.3]
   [ 1.3  0.1  2.3]
   [ 1.2  0.2  2.3]
   [ 1.5  0.0  2.2]
   [ 1.6  0.0  2.2]
   [ 1.7 -0.0  2.1]
   [ 1.9 -0.0  2.1]
   [ 1.9 -0.1  2.0]
   [ 1.2 -0.0  2.3]
   [ 1.1  0.0  2.3]
   [ 1.0  0.1  2.5]
   [ 1.1  0.1  2.6]
   [ 1.0 -0.1  2.4]
   [ 1.0 -0.2  2.3]
   [ 0.9 -0.3  2.3]
   [ 0.9 -0.2  2.2]
   [ 0.9  0.2  2.4]
   [ 0.9  0.3  2.5]
   [ 0.8  0.3  2.6]
   [ 0.7  0.2  2.6]
   [ 0.9  0.4  2.4]
   [ 1.0  0.5  2.4]
   [ 0.9  0.7  2.3]
   [ 0.8  0.7  2.3]
   [ 1.0  0.8  2.4]
   [ 0.8  0.3  2.7]
   [ 0.7  0.3  2.9]
   [ 0.6  0.4  2.8]
   [ 0.6  0.5  2.7]
   [ 0.8  0.3  3.0]
   [ 0.9  0.2  3.0]
   [ 0.9  0.3  3.2]
   [ 1.0  0.4  3.2]
   [ 1.1  0.4  3.1]
   [ 1.2  0.3  3.1]
   [ 1.1  0.6  3.1]
   [ 0.5  0.4  2.9]
   [ 0.4  0.4  2.9]
   [ 0.4  0.6  2.9]
   [ 0.3  0.7  2.8]
   [ 0.3  0.4  3.0]
   [ 0.2  0.2  2.9]
   [ 0.1  0.5  3.0]
   [ 0.2  0.2  2.8]
   [ 0.4  0.6  3.0]
   [ 0.4  0.8  3.0]
   [ 0.5  0.8  2.9]
   [ 0.5  0.9  2.8]
   [ 0.5  0.8  3.1]
   [ 0.4  0.8  3.2]
   [ 0.4  0.9  3.4]
   [ 0.2  0.9  3.2]
   [ 0.6  0.8  2.9]
   [ 0.7  0.9  2.7]
   [ 0.6  0.8  2.6]
   [ 0.6  0.9  2.5]
   [ 0.8  0.8  2.8]
   [ 0.9  0.7  2.9]
   [ 0.7  0.7  2.9]
   [ 0.6  0.7  2.6]
   [ 0.5  0.7  2.5]
   [ 0.4  0.8  2.4]
   [ 0.4  0.8  2.3]
   [ 0.5  0.6  2.4]
   [ 0.4  0.5  2.3]
   [ 0.5  0.5  2.2]
   [ 0.3  0.5  2.3]
   [ 0.5  0.5  2.1]
   [ 0.2  0.5  2.1]
   [ 0.3  0.5  2.0]
   [ 0.3  0.8  2.6]
   [ 0.2  0.9  2.5]
   [ 0.3  1.1  2.5]
   [ 0.2  1.1  2.4]
   [ 0.1  0.9  2.7]
   [ 0.2  1.0  2.8]
   [ 0.4  1.1  2.5]
   [ 0.4  1.2  2.5]
   [ 0.5  1.2  2.3]
   [ 0.5  1.3  2.3]
   [ 0.6  1.3  2.6]
   [ 0.5  1.3  2.7]
   [ 0.6  1.3  2.8]
   [ 0.6  1.4  3.0]
   [ 0.5  1.3  3.0]
   [ 0.5  1.1  2.3]
   [ 0.6  1.1  2.2]
   [ 0.5  1.1  2.1]
   [ 0.5  1.1  2.0]
   [ 0.6  0.9  2.2]
   [ 0.8  0.9  2.2]]
# ---
# name: test_dihedral_rotations[8H1B-NucleicDihedral]
  [[ 1.6 -0.1  2.8]
   [ 1.5 -0.1  2.7]
   [ 1.5  0.0  2.6]
   [ 1.5  0.1  2.6]
   [ 1.4 -0.1  2.8]
   [ 1.3 -0.1  2.7]
   [ 1.1 -0.2  2.8]
   [ 1.1 -0.1  2.9]
   [ 1.5 -0.0  2.4]
   [ 1.4  0.1  2.3]
   [ 1.3  0.1  2.3]
   [ 1.2  0.2  2.3]
   [ 1.5  0.0  2.2]
   [ 1.6  0.0  2.2]
   [ 1.7 -0.0  2.1]
   [ 1.9 -0.0  2.1]
   [ 1.9 -0.1  2.0]
   [ 1.2 -0.0  2.3]
   [ 1.1  0.0  2.3]
   [ 1.0  0.1  2.5]
   [ 1.1  0.1  2.6]
   [ 1.0 -0.1  2.4]
   [ 1.0 -0.2  2.3]
   [ 0.9 -0.3  2.3]
   [ 0.9 -0.2  2.2]
   [ 0.9  0.2  2.4]
   [ 0.9  0.3  2.5]
   [ 0.8  0.3  2.6]
   [ 0.7  0.2  2.6]
   [ 0.9  0.4  2.4]
   [ 1.0  0.5  2.4]
   [ 0.9  0.7  2.3]
   [ 0.8  0.7  2.3]
   [ 1.0  0.8  2.4]
   [ 0.8  0.3  2.7]
   [ 0.7  0.3  2.9]
   [ 0.6  0.4  2.8]
   [ 0.6  0.5  2.7]
   [ 0.8  0.3  3.0]
   [ 0.9  0.2  3.0]
   [ 0.9  0.3  3.2]
   [ 1.0  0.4  3.2]
   [ 1.1  0.4  3.1]
   [ 1.2  0.3  3.1]
   [ 1.1  0.6  3.1]
   [ 0.5  0.4  2.9]
   [ 0.4  0.4  2.9]
   [ 0.4  0.6  2.9]
   [ 0.3  0.7  2.8]
   [ 0.3  0.4  3.0]
   [ 0.2  0.2  2.9]
   [ 0.1  0.5  3.0]
   [ 0.2  0.2  2.8]
   [ 0.4  0.6  3.0]
   [ 0.4  0.8  3.0]
   [ 0.5  0.8  2.9]
   [ 0.5  0.9  2.8]
   [ 0.5  0.8  3.1]
   [ 0.4  0.8  3.2]
   [ 0.4  0.9  3.4]
   [ 0.2  0.9  3.2]
   [ 0.6  0.8  2.9]
   [ 0.7  0.9  2.7]
   [ 0.6  0.8  2.6]
   [ 0.6  0.9  2.5]
   [ 0.8  0.8  2.8]
   [ 0.9  0.7  2.9]
   [ 0.7  0.7  2.9]
   [ 0.6  0.7  2.6]
   [ 0.5  0.7  2.5]
   [ 0.4  0.8  2.4]
   [ 0.4  0.8  2.3]
   [ 0.5  0.6  2.4]
   [ 0.4  0.5  2.3]
   [ 0.5  0.5  2.2]
   [ 0.3  0.5  2.3]
   [ 0.5  0.5  2.1]
   [ 0.2  0.5  2.1]
   [ 0.3  0.5  2.0]
   [ 0.3  0.8  2.6]
   [ 0.2  0.9  2.5]
   [ 0.3  1.1  2.5]
   [ 0.2  1.1  2.4]
   [ 0.1  0.9  2.7]
   [ 0.2  1.0  2.8]
   [ 0.4  1.1  2.5]
   [ 0.4  1.2  2.5]
   [ 0.5  1.2  2.3]
   [ 0.5  1.3  2.3]
   [ 0.6  1.3  2.6]
   [ 0.5  1.3  2.7]
   [ 0.6  1.3  2.8]
   [ 0.6  1.4  3.0]
   [ 0.5  1.3  3.0]
   [ 0.5  1.1  2.3]
   [ 0.6  1.1  2.2]
   [ 0.5  1.1  2.1]
   [ 0.5  1.1  2.0]
   [ 0.6  0.9  2.2]
   [ 0.8  0.9  2.2]]
# ---
# name: test_dihedral_rotations[8H1B-PeptideChi]
  [[ 1.6 -0.1  2.8]
   [ 1.5 -0.1  2.7]
   [ 1.5  0.0  2.6]
   [ 1.5  0.1  2.6]
   [ 1.4 -0.1  2.8]
   [ 1.3 -0.0  2.7]
   [ 1.1 -0.1  2.7]
   [ 1.2 -0.3  2.7]
   [ 1.5 -0.0  2.4]
   [ 1.4  0.1  2.3]
   [ 1.3  0.1  2.3]
   [ 1.2  0.2  2.3]
   [ 1.5  0.0  2.2]
   [ 1.6  0.1  2.1]
   [ 1.7  0.1  2.1]
   [ 1.8  0.1  2.0]
   [ 1.9  0.2  2.0]
   [ 1.2 -0.0  2.3]
   [ 1.1  0.0  2.3]
   [ 1.0  0.1  2.5]
   [ 1.1  0.1  2.6]
   [ 1.0 -0.1  2.4]
   [ 0.9 -0.1  2.3]
   [ 0.9 -0.3  2.2]
   [ 0.7 -0.1  2.4]
   [ 0.9  0.2  2.4]
   [ 0.9  0.3  2.5]
   [ 0.8  0.3  2.6]
   [ 0.7  0.2  2.6]
   [ 0.9  0.4  2.4]
   [ 0.9  0.6  2.5]
   [ 0.9  0.7  2.4]
   [ 1.0  0.6  2.3]
   [ 0.9  0.8  2.4]
   [ 0.8  0.3  2.7]
   [ 0.7  0.3  2.9]
   [ 0.6  0.4  2.8]
   [ 0.6  0.5  2.7]
   [ 0.8  0.3  3.0]
   [ 0.8  0.2  3.1]
   [ 0.9  0.2  3.2]
   [ 0.9  0.0  3.1]
   [ 1.0 -0.1  3.2]
   [ 1.1 -0.1  3.2]
   [ 0.9 -0.2  3.2]
   [ 0.5  0.4  2.9]
   [ 0.4  0.4  2.9]
   [ 0.4  0.6  2.9]
   [ 0.3  0.7  2.8]
   [ 0.3  0.4  3.0]
   [ 0.1  0.3  2.9]
   [ 0.2  0.5  3.1]
   [ 0.0  0.4  2.9]
   [ 0.4  0.6  3.0]
   [ 0.4  0.8  3.0]
   [ 0.5  0.8  2.9]
   [ 0.5  0.9  2.8]
   [ 0.5  0.8  3.1]
   [ 0.4  0.9  3.2]
   [ 0.3  0.9  3.3]
   [ 0.4  1.1  3.2]
   [ 0.6  0.8  2.9]
   [ 0.7  0.9  2.7]
   [ 0.6  0.8  2.6]
   [ 0.6  0.9  2.5]
   [ 0.8  0.8  2.8]
   [ 0.9  0.7  2.9]
   [ 0.7  0.7  2.9]
   [ 0.6  0.7  2.6]
   [ 0.5  0.7  2.5]
   [ 0.4  0.8  2.4]
   [ 0.4  0.8  2.3]
   [ 0.5  0.6  2.4]
   [ 0.3  0.5  2.4]
   [ 0.3  0.7  2.4]
   [ 0.3  0.4  2.4]
   [ 0.1  0.7  2.3]
   [ 0.1  0.4  2.3]
   [ 0.1  0.5  2.3]
   [ 0.3  0.8  2.6]
   [ 0.2  0.9  2.5]
   [ 0.3  1.1  2.5]
   [ 0.2  1.1  2.4]
   [ 0.1  0.9  2.7]
   [ 0.2  0.9  2.8]
   [ 0.4  1.1  2.5]
   [ 0.4  1.2  2.5]
   [ 0.5  1.2  2.3]
   [ 0.5  1.3  2.3]
   [ 0.6  1.3  2.6]
   [ 0.6  1.4  2.6]
   [ 0.6  1.4  2.8]
   [ 0.7  1.5  2.8]
   [ 0.7  1.6  2.7]
   [ 0.5  1.1  2.3]
   [ 0.6  1.1  2.2]
   [ 0.5  1.1  2.1]
   [ 0.5  1.1  2.0]
   [ 0.6  0.9  2.2]
   [ 0.8  0.9  2.1]]
# ---
# name: test_dihedral_rotations[8H1B-PeptideDihedral]
  [[ 1.6 -0.1  2.8]
   [ 1.5 -0.1  2.7]
   [ 1.5  0.0  2.6]
   [ 1.4  0.1  2.6]
   [ 1.4 -0.1  2.8]
   [ 1.3 -0.1  2.7]
   [ 1.1 -0.2  2.8]
   [ 1.1 -0.1  2.9]
   [ 1.6  0.0  2.5]
   [ 1.5  0.1  2.4]
   [ 1.6  0.0  2.2]
   [ 1.5 -0.0  2.2]
   [ 1.6  0.2  2.4]
   [ 1.6  0.3  2.5]
   [ 1.6  0.4  2.5]
   [ 1.6  0.5  2.7]
   [ 1.6  0.6  2.7]
   [ 1.7  0.1  2.2]
   [ 1.8  0.0  2.1]
   [ 1.9 -0.1  2.1]
   [ 2.0 -0.1  2.1]
   [ 1.8  0.1  2.0]
   [ 1.7  0.2  1.9]
   [ 1.8  0.3  1.8]
   [ 1.6  0.1  1.8]
   [ 1.8 -0.2  2.1]
   [ 1.9 -0.3  2.2]
   [ 1.9 -0.5  2.1]
   [ 1.8 -0.5  2.2]
   [ 1.9 -0.3  2.3]
   [ 2.0 -0.2  2.4]
   [ 2.1 -0.2  2.5]
   [ 2.0 -0.2  2.6]
   [ 2.2 -0.2  2.5]
   [ 1.9 -0.5  2.0]
   [ 1.9 -0.6  1.9]
   [ 2.0 -0.7  1.9]
   [ 2.0 -0.6  1.8]
   [ 1.8 -0.6  1.8]
   [ 1.6 -0.6  1.9]
   [ 1.5 -0.6  1.8]
   [ 1.6 -0.5  1.7]
   [ 1.5 -0.4  1.7]
   [ 1.4 -0.3  1.8]
   [ 1.6 -0.3  1.6]
   [ 2.1 -0.8  1.9]
   [ 2.2 -0.8  1.9]
   [ 2.2 -0.9  1.8]
   [ 2.2 -1.0  1.7]
   [ 2.3 -0.8  2.0]
   [ 2.3 -0.6  2.0]
   [ 2.4 -0.8  2.0]
   [ 2.4 -0.5  1.9]
   [ 2.3 -1.0  1.9]
   [ 2.3 -1.2  1.8]
   [ 2.2 -1.3  1.9]
   [ 2.1 -1.3  1.9]
   [ 2.4 -1.2  1.8]
   [ 2.5 -1.1  1.7]
   [ 2.6 -1.2  1.7]
   [ 2.4 -1.1  1.6]
   [ 2.3 -1.4  2.0]
   [ 2.2 -1.5  2.1]
   [ 2.2 -1.4  2.2]
   [ 2.2 -1.3  2.3]
   [ 2.3 -1.6  2.0]
   [ 2.3 -1.6  1.9]
   [ 2.4 -1.4  1.9]
   [ 2.3 -1.5  2.3]
   [ 2.4 -1.5  2.4]
   [ 2.5 -1.5  2.5]
   [ 2.6 -1.3  2.4]
   [ 2.3 -1.6  2.5]
   [ 2.3 -1.6  2.7]
   [ 2.2 -1.5  2.7]
   [ 2.4 -1.6  2.8]
   [ 2.3 -1.4  2.9]
   [ 2.4 -1.6  2.9]
   [ 2.3 -1.5  2.9]
   [ 2.6 -1.6  2.5]
   [ 2.7 -1.5  2.5]
   [ 2.8 -1.6  2.4]
   [ 2.8 -1.6  2.3]
   [ 2.8 -1.6  2.6]
   [ 2.8 -1.7  2.7]
   [ 2.9 -1.7  2.4]
   [ 2.9 -1.8  2.3]
   [ 2.9 -1.9  2.3]
   [ 2.8 -2.0  2.2]
   [ 3.1 -1.8  2.4]
   [ 3.2 -1.7  2.3]
   [ 3.3 -1.7  2.4]
   [ 3.4 -1.6  2.4]
   [ 3.3 -1.5  2.5]
   [ 2.9 -2.0  2.4]
   [ 2.9 -2.2  2.4]
   [ 2.8 -2.2  2.5]
   [ 2.7 -2.2  2.6]
   [ 3.0 -2.3  2.3]
   [ 3.0 -2.3  2.2]]
# ---
# name: test_periodic_array
  dict({
    'instances': dict({
      'attributes': dict({
        'instance_transform': 'shape=(27, 4, 4), atype=FLOAT4X4, range=[-7e-07, 24]',
      }),
      'points': '27',
      'reference_index': '[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]',
      'references': list([
        'GeometrySet(~47700 verts, 0 polys)',
      ]),
      'transforms': list([
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [0.000, 0.000, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [4.004, 4.004, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [8.009, 8.009, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [0.000, 8.009, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [4.004, 12.013, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [8.009, 16.017, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [0.000, 16.017, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [4.004, 20.021, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [8.009, 24.026, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [8.009, 0.000, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [12.013, 4.004, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [16.017, 8.009, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [8.009, 8.009, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [12.013, 12.013, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [16.017, 16.017, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [8.009, 16.017, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [12.013, 20.021, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [16.017, 24.026, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [16.017, 0.000, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [20.021, 4.004, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [24.026, 8.009, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [16.017, 8.009, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [20.021, 12.013, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [24.026, 16.017, 11.326, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [16.017, 16.017, 0.000, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [20.021, 20.021, 5.663, 1.000]',
        '[1.000, 0.000, 0.000, 0.000] [0.000, 1.000, 0.000, 0.000] [0.000, 0.000, 1.000, 0.000] [24.026, 24.026, 11.326, 1.000]',
      ]),
      'unique_references': 1,
    }),
    'mesh': dict({
      'attributes': dict({
        'position': 'shape=(0, 3), atype=FLOAT_VECTOR, unique=0, values=[]',
      }),
      'edges': '0',
      'name': 'adk_oplsaa.gro',
      'polys': '0',
      'verts': '0',
    }),
  })
# ---
# name: test_selection_working[chain_id-1BNA]
  tuple(
    456,
    3,
  )
# ---
# name: test_selection_working[chain_id-1BNA].1
  [[ 2.1e+00  3.5e+00  2.3e+00]
   [ 2.1e+00  3.5e+00  2.4e+00]
   [ 2.0e+00  3.4e+00  2.5e+00]
   [ 1.9e+00  3.3e+00  2.5e+00]
   [ 1.9e+00  3.3e+00  2.4e+00]
   [ 1.8e+00  3.3e+00  2.3e+00]
   [ 1.9e+00  3.4e+00  2.2e+00]
   [ 2.0e+00  3.5e+00  2.2e+00]
   [ 2.2e+00  3.3e+00  2.2e+00]
   [ 2.2e+00  3.3e+00  2.3e+00]
   [ 2.1e+00  3.2e+00  2.4e+00]
   [ 2.1e+00  3.2e+00  2.4e+00]
   [ 2.0e+00  3.1e+00  2.3e+00]
   [ 2.0e+00  3.2e+00  2.2e+00]
   [ 2.0e+00  3.2e+00  2.1e+00]
   [ 2.1e+00  3.3e+00  2.1e+00]
   [ 2.3e+00  3.2e+00  2.1e+00]
   [ 2.3e+00  3.1e+00  2.3e+00]
   [ 2.3e+00  3.1e+00  2.3e+00]
   [ 2.2e+00  3.0e+00  2.3e+00]
   [ 2.1e+00  3.0e+00  2.3e+00]
   [ 2.1e+00  3.0e+00  2.2e+00]
   [ 2.1e+00  3.1e+00  2.1e+00]
   [ 2.2e+00  3.1e+00  2.1e+00]
   [ 2.4e+00  3.0e+00  2.1e+00]
   [ 2.4e+00  3.0e+00  2.2e+00]
   [ 2.4e+00  2.9e+00  2.3e+00]
   [ 2.3e+00  2.8e+00  2.3e+00]
   [ 2.2e+00  2.8e+00  2.2e+00]
   [ 2.2e+00  2.9e+00  2.1e+00]
   [ 2.2e+00  2.9e+00  2.0e+00]
   [ 2.3e+00  3.0e+00  2.0e+00]
   [ 2.5e+00  2.8e+00  2.0e+00]
   [ 2.5e+00  2.8e+00  2.1e+00]
   [ 2.5e+00  2.7e+00  2.2e+00]
   [ 2.3e+00  2.7e+00  2.2e+00]
   [ 2.3e+00  2.7e+00  2.2e+00]
   [ 2.2e+00  2.7e+00  2.0e+00]
   [ 2.3e+00  2.8e+00  2.0e+00]
   [ 2.4e+00  2.8e+00  1.9e+00]
   [ 2.5e+00  2.6e+00  1.9e+00]
   [ 2.5e+00  2.6e+00  2.1e+00]
   [ 2.5e+00  2.6e+00  2.1e+00]
   [ 2.4e+00  2.5e+00  2.2e+00]
   [ 2.3e+00  2.5e+00  2.1e+00]
   [ 2.3e+00  2.6e+00  2.0e+00]
   [ 2.3e+00  2.6e+00  1.9e+00]
   [ 2.4e+00  2.6e+00  1.9e+00]
   [ 2.5e+00  2.5e+00  1.9e+00]
   [ 2.5e+00  2.4e+00  2.0e+00]
   [ 2.5e+00  2.4e+00  2.1e+00]
   [ 2.4e+00  2.4e+00  2.1e+00]
   [ 2.3e+00  2.4e+00  2.1e+00]
   [ 2.3e+00  2.5e+00  2.0e+00]
   [ 2.3e+00  2.5e+00  1.9e+00]
   [ 2.4e+00  2.5e+00  1.8e+00]
   [ 2.5e+00  2.3e+00  1.8e+00]
   [ 2.5e+00  2.3e+00  2.0e+00]
   [ 2.5e+00  2.3e+00  2.1e+00]
   [ 2.4e+00  2.3e+00  2.1e+00]
   [ 2.3e+00  2.3e+00  2.0e+00]
   [ 2.2e+00  2.3e+00  1.9e+00]
   [ 2.3e+00  2.4e+00  1.8e+00]
   [ 2.4e+00  2.3e+00  1.8e+00]
   [ 2.5e+00  2.2e+00  1.8e+00]
   [ 2.5e+00  2.1e+00  1.9e+00]
   [ 2.4e+00  2.1e+00  2.0e+00]
   [ 2.3e+00  2.1e+00  2.0e+00]
   [ 2.2e+00  2.2e+00  2.0e+00]
   [ 2.2e+00  2.2e+00  1.9e+00]
   [ 2.3e+00  2.2e+00  1.8e+00]
   [ 2.4e+00  2.2e+00  1.7e+00]
   [ 2.4e+00  2.0e+00  1.8e+00]
   [ 2.5e+00  2.0e+00  1.9e+00]
   [ 2.4e+00  1.9e+00  2.0e+00]
   [ 2.3e+00  2.0e+00  2.0e+00]
   [ 2.2e+00  2.0e+00  1.9e+00]
   [ 2.2e+00  2.0e+00  1.8e+00]
   [ 2.2e+00  2.1e+00  1.7e+00]
   [ 2.3e+00  2.0e+00  1.7e+00]
   [ 2.4e+00  1.9e+00  1.7e+00]
   [ 2.4e+00  1.8e+00  1.8e+00]
   [ 2.4e+00  1.8e+00  1.9e+00]
   [ 2.3e+00  1.8e+00  1.9e+00]
   [ 2.2e+00  1.9e+00  1.9e+00]
   [ 2.1e+00  1.9e+00  1.8e+00]
   [ 2.2e+00  1.9e+00  1.7e+00]
   [ 2.3e+00  1.9e+00  1.7e+00]
   [ 2.3e+00  1.7e+00  1.7e+00]
   [ 2.3e+00  1.7e+00  1.8e+00]
   [ 2.3e+00  1.7e+00  1.9e+00]
   [ 2.2e+00  1.7e+00  1.9e+00]
   [ 2.1e+00  1.8e+00  1.9e+00]
   [ 2.1e+00  1.8e+00  1.8e+00]
   [ 2.1e+00  1.8e+00  1.7e+00]
   [ 2.2e+00  1.8e+00  1.6e+00]
   [ 2.2e+00  1.6e+00  1.6e+00]
   [ 2.2e+00  1.5e+00  1.7e+00]
   [ 2.2e+00  1.5e+00  1.8e+00]
   [ 2.1e+00  1.6e+00  1.9e+00]
   [ 2.0e+00  1.7e+00  1.8e+00]
   [ 2.0e+00  1.7e+00  1.7e+00]
   [ 2.1e+00  1.7e+00  1.6e+00]
   [ 2.1e+00  1.7e+00  1.6e+00]
   [ 2.1e+00  1.5e+00  1.6e+00]
   [ 2.1e+00  1.4e+00  1.7e+00]
   [ 2.1e+00  1.4e+00  1.8e+00]
   [ 2.0e+00  1.5e+00  1.8e+00]
   [ 1.9e+00  1.6e+00  1.8e+00]
   [ 1.9e+00  1.6e+00  1.7e+00]
   [ 2.0e+00  1.6e+00  1.6e+00]
   [ 2.0e+00  1.5e+00  1.5e+00]
   [ 2.0e+00  1.4e+00  1.5e+00]
   [ 2.0e+00  1.3e+00  1.6e+00]
   [ 1.9e+00  1.3e+00  1.7e+00]
   [ 1.9e+00  1.4e+00  1.8e+00]
   [ 1.8e+00  1.5e+00  1.8e+00]
   [ 1.8e+00  1.6e+00  1.7e+00]
   [ 1.8e+00  1.5e+00  1.6e+00]
   [ 1.9e+00  1.5e+00  1.5e+00]
   [ 1.8e+00  1.3e+00  1.5e+00]
   [ 1.8e+00  1.2e+00  1.6e+00]
   [ 1.8e+00  1.3e+00  1.7e+00]
   [ 1.7e+00  1.3e+00  1.8e+00]
   [ 1.7e+00  1.5e+00  1.7e+00]
   [ 1.7e+00  1.5e+00  1.6e+00]
   [ 1.7e+00  1.5e+00  1.5e+00]
   [ 1.8e+00  1.4e+00  1.5e+00]
   [ 1.7e+00  1.3e+00  1.5e+00]
   [ 1.6e+00  1.2e+00  1.5e+00]
   [ 1.6e+00  1.2e+00  1.7e+00]
   [ 1.6e+00  1.3e+00  1.7e+00]
   [ 1.5e+00  1.4e+00  1.7e+00]
   [ 1.6e+00  1.5e+00  1.6e+00]
   [ 1.6e+00  1.5e+00  1.5e+00]
   [ 1.6e+00  1.4e+00  1.4e+00]
   [ 1.5e+00  1.2e+00  1.4e+00]
   [ 1.5e+00  1.2e+00  1.5e+00]
   [ 1.4e+00  1.2e+00  1.6e+00]
   [ 1.4e+00  1.3e+00  1.7e+00]
   [ 1.4e+00  1.4e+00  1.6e+00]
   [ 1.4e+00  1.5e+00  1.6e+00]
   [ 1.5e+00  1.4e+00  1.4e+00]
   [ 1.5e+00  1.4e+00  1.4e+00]
   [ 1.3e+00  1.2e+00  1.3e+00]
   [ 1.3e+00  1.2e+00  1.4e+00]
   [ 1.3e+00  1.2e+00  1.5e+00]
   [ 1.2e+00  1.3e+00  1.6e+00]
   [ 1.3e+00  1.4e+00  1.6e+00]
   [ 1.3e+00  1.5e+00  1.5e+00]
   [ 1.3e+00  1.5e+00  1.4e+00]
   [ 1.4e+00  1.4e+00  1.3e+00]
   [ 1.2e+00  1.3e+00  1.3e+00]
   [ 1.2e+00  1.2e+00  1.4e+00]
   [ 1.1e+00  1.2e+00  1.5e+00]
   [ 1.1e+00  1.3e+00  1.5e+00]
   [ 1.1e+00  1.4e+00  1.5e+00]
   [ 1.2e+00  1.5e+00  1.5e+00]
   [ 1.2e+00  1.5e+00  1.4e+00]
   [ 1.3e+00  1.4e+00  1.3e+00]
   [ 1.1e+00  1.3e+00  1.2e+00]
   [ 1.0e+00  1.3e+00  1.3e+00]
   [ 9.5e-01  1.3e+00  1.4e+00]
   [ 9.4e-01  1.4e+00  1.4e+00]
   [ 9.9e-01  1.5e+00  1.4e+00]
   [ 1.1e+00  1.5e+00  1.4e+00]
   [ 1.1e+00  1.5e+00  1.3e+00]
   [ 1.1e+00  1.4e+00  1.2e+00]
   [ 9.9e-01  1.4e+00  1.1e+00]
   [ 9.0e-01  1.3e+00  1.2e+00]
   [ 8.3e-01  1.4e+00  1.2e+00]
   [ 8.2e-01  1.5e+00  1.3e+00]
   [ 8.8e-01  1.6e+00  1.3e+00]
   [ 9.7e-01  1.6e+00  1.3e+00]
   [ 1.0e+00  1.6e+00  1.2e+00]
   [ 1.0e+00  1.5e+00  1.1e+00]
   [ 9.2e-01  1.5e+00  1.0e+00]
   [ 8.2e-01  1.4e+00  1.1e+00]
   [ 7.4e-01  1.5e+00  1.1e+00]
   [ 7.4e-01  1.5e+00  1.2e+00]
   [ 8.0e-01  1.6e+00  1.2e+00]
   [ 9.0e-01  1.7e+00  1.2e+00]
   [ 9.8e-01  1.6e+00  1.1e+00]
   [ 9.8e-01  1.6e+00  1.1e+00]
   [ 8.6e-01  1.5e+00  9.3e-01]
   [ 7.5e-01  1.5e+00  9.6e-01]
   [ 6.8e-01  1.5e+00  1.0e+00]
   [ 6.7e-01  1.6e+00  1.1e+00]
   [ 7.4e-01  1.7e+00  1.1e+00]
   [ 8.5e-01  1.7e+00  1.1e+00]
   [ 9.3e-01  1.7e+00  1.0e+00]
   [ 9.3e-01  1.6e+00  9.7e-01]
   [ 8.1e-01  1.6e+00  8.2e-01]
   [ 7.0e-01  1.6e+00  8.5e-01]
   [ 6.2e-01  1.7e+00  9.2e-01]
   [ 6.1e-01  1.7e+00  1.0e+00]
   [ 6.9e-01  1.8e+00  1.0e+00]
   [ 7.9e-01  1.8e+00  1.0e+00]
   [ 8.7e-01  1.8e+00  9.4e-01]
   [ 8.8e-01  1.7e+00  8.6e-01]
   [ 7.5e-01  1.7e+00  7.1e-01]
   [ 6.4e-01  1.7e+00  7.3e-01]
   [ 5.6e-01  1.8e+00  8.0e-01]
   [ 5.6e-01  1.8e+00  8.8e-01]
   [ 6.3e-01  1.9e+00  9.2e-01]
   [ 7.4e-01  1.9e+00  9.0e-01]
   [ 8.2e-01  1.9e+00  8.3e-01]
   [ 8.3e-01  1.8e+00  7.5e-01]
   [ 7.2e-01  1.8e+00  6.1e-01]
   [ 6.0e-01  1.8e+00  6.3e-01]
   [ 5.2e-01  1.9e+00  6.9e-01]
   [ 5.2e-01  1.9e+00  7.7e-01]
   [ 5.9e-01  2.0e+00  8.2e-01]
   [ 7.1e-01  2.0e+00  8.1e-01]
   [ 7.9e-01  2.0e+00  7.4e-01]
   [ 7.9e-01  1.9e+00  6.6e-01]
   [ 7.0e-01  1.9e+00  5.2e-01]
   [ 5.8e-01  1.9e+00  5.2e-01]
   [ 5.0e-01  2.0e+00  5.8e-01]
   [ 5.0e-01  2.1e+00  6.6e-01]
   [ 5.7e-01  2.1e+00  7.1e-01]
   [ 6.9e-01  2.1e+00  7.1e-01]
   [ 7.7e-01  2.1e+00  6.6e-01]
   [ 7.8e-01  2.0e+00  5.8e-01]
   [ 7.0e-01  2.0e+00  4.1e-01]
   [ 5.9e-01  2.0e+00  4.0e-01]
   [ 5.1e-01  2.1e+00  4.5e-01]
   [ 5.0e-01  2.2e+00  5.3e-01]
   [ 5.8e-01  2.2e+00  6.0e-01]
   [ 6.9e-01  2.2e+00  6.1e-01]
   [ 7.8e-01  2.2e+00  5.6e-01]
   [ 7.8e-01  2.1e+00  4.8e-01]
   [ 7.4e-01  2.1e+00  3.1e-01]
   [ 6.3e-01  2.2e+00  2.8e-01]
   [ 5.4e-01  2.2e+00  3.2e-01]
   [ 5.4e-01  2.3e+00  4.1e-01]
   [ 6.1e-01  2.4e+00  4.8e-01]
   [ 7.2e-01  2.3e+00  5.1e-01]
   [ 8.0e-01  2.3e+00  4.7e-01]
   [ 8.1e-01  2.2e+00  3.8e-01]
   [ 7.9e-01  2.2e+00  2.3e-01]
   [ 6.8e-01  2.3e+00  1.9e-01]
   [ 6.0e-01  2.4e+00  2.2e-01]
   [ 6.0e-01  2.4e+00  3.1e-01]
   [ 6.7e-01  2.5e+00  3.9e-01]
   [ 7.8e-01  2.4e+00  4.3e-01]
   [ 8.5e-01  2.4e+00  3.9e-01]
   [ 8.6e-01  2.3e+00  3.1e-01]
   [ 8.4e-01  2.3e+00  1.5e-01]
   [ 7.4e-01  2.4e+00  1.1e-01]
   [ 6.7e-01  2.4e+00  1.3e-01]
   [ 6.8e-01  2.5e+00  2.1e-01]
   [ 7.5e-01  2.6e+00  2.9e-01]
   [ 8.5e-01  2.5e+00  3.3e-01]
   [ 9.2e-01  2.4e+00  3.0e-01]
   [ 9.2e-01  2.4e+00  2.3e-01]
   [ 9.1e-01  2.4e+00  4.8e-02]
   [ 8.1e-01  2.4e+00  1.2e-02]
   [ 7.4e-01  2.5e+00  2.7e-02]
   [ 7.5e-01  2.6e+00  8.5e-02]
   [ 8.3e-01  2.7e+00  1.5e-01]
   [ 9.4e-01  2.6e+00  1.9e-01]
   [ 1.0e+00  2.5e+00  1.7e-01]
   [ 9.9e-01  2.4e+00  1.1e-01]
   [ 9.6e-01  2.4e+00 -6.7e-02]
   [ 8.5e-01  2.5e+00 -9.9e-02]
   [ 7.9e-01  2.6e+00 -9.4e-02]
   [ 8.1e-01  2.7e+00 -5.6e-02]
   [ 9.0e-01  2.7e+00 -5.9e-03]
   [ 1.0e+00  2.7e+00  2.6e-02]
   [ 1.1e+00  2.6e+00  2.1e-02]
   [ 1.0e+00  2.5e+00 -1.7e-02]
   [ 1.0e+00  2.5e+00 -1.8e-01]
   [ 8.9e-01  2.5e+00 -2.2e-01]
   [ 8.4e-01  2.6e+00 -2.3e-01]
   [ 8.7e-01  2.7e+00 -2.0e-01]
   [ 9.6e-01  2.8e+00 -1.6e-01]
   [ 1.1e+00  2.7e+00 -1.2e-01]
   [ 1.1e+00  2.6e+00 -1.1e-01]
   [ 1.1e+00  2.5e+00 -1.4e-01]
   [ 1.1e+00  2.5e+00 -3.0e-01]
   [ 9.6e-01  2.5e+00 -3.5e-01]
   [ 9.1e-01  2.6e+00 -3.7e-01]
   [ 9.4e-01  2.7e+00 -3.5e-01]
   [ 1.0e+00  2.8e+00 -3.0e-01]
   [ 1.1e+00  2.7e+00 -2.4e-01]
   [ 1.2e+00  2.6e+00 -2.2e-01]
   [ 1.1e+00  2.5e+00 -2.4e-01]
   [ 1.1e+00  2.5e+00 -4.2e-01]
   [ 1.1e+00  2.5e+00 -5.0e-01]
   [ 1.0e+00  2.6e+00 -5.3e-01]
   [ 1.1e+00  2.7e+00 -5.0e-01]
   [ 1.1e+00  2.8e+00 -4.2e-01]
   [ 1.2e+00  2.7e+00 -3.4e-01]
   [ 1.2e+00  2.6e+00 -3.1e-01]
   [ 1.2e+00  2.5e+00 -3.4e-01]
   [ 1.3e+00  2.5e+00 -5.1e-01]
   [ 1.2e+00  2.5e+00 -6.0e-01]
   [ 1.2e+00  2.6e+00 -6.5e-01]
   [ 1.2e+00  2.7e+00 -6.1e-01]
   [ 1.3e+00  2.8e+00 -5.1e-01]
   [ 1.3e+00  2.7e+00 -4.2e-01]
   [ 1.3e+00  2.6e+00 -3.8e-01]
   [ 1.3e+00  2.5e+00 -4.2e-01]
   [ 1.4e+00  2.5e+00 -5.6e-01]
   [ 1.4e+00  2.5e+00 -6.6e-01]
   [ 1.4e+00  2.6e+00 -7.0e-01]
   [ 1.4e+00  2.7e+00 -6.7e-01]
   [ 1.4e+00  2.8e+00 -5.7e-01]
   [ 1.4e+00  2.7e+00 -4.7e-01]
   [ 1.5e+00  2.6e+00 -4.2e-01]
   [ 1.4e+00  2.5e+00 -4.6e-01]
   [ 1.5e+00  2.5e+00 -5.9e-01]
   [ 1.5e+00  2.5e+00 -6.9e-01]
   [ 1.5e+00  2.6e+00 -7.5e-01]
   [ 1.5e+00  2.7e+00 -7.2e-01]
   [ 1.6e+00  2.8e+00 -6.2e-01]
   [ 1.6e+00  2.7e+00 -5.2e-01]
   [ 1.6e+00  2.6e+00 -4.7e-01]
   [ 1.6e+00  2.5e+00 -5.0e-01]
   [ 1.7e+00  2.4e+00 -6.6e-01]
   [ 1.6e+00  2.5e+00 -7.5e-01]
   [ 1.6e+00  2.6e+00 -8.1e-01]
   [ 1.7e+00  2.7e+00 -7.9e-01]
   [ 1.7e+00  2.7e+00 -7.1e-01]
   [ 1.8e+00  2.7e+00 -6.2e-01]
   [ 1.8e+00  2.6e+00 -5.6e-01]
   [ 1.7e+00  2.5e+00 -5.8e-01]
   [ 1.8e+00  2.4e+00 -7.6e-01]
   [ 1.7e+00  2.4e+00 -8.5e-01]
   [ 1.7e+00  2.5e+00 -9.1e-01]
   [ 1.8e+00  2.6e+00 -9.1e-01]
   [ 1.9e+00  2.6e+00 -8.4e-01]
   [ 1.9e+00  2.6e+00 -7.5e-01]
   [ 1.9e+00  2.5e+00 -6.9e-01]
   [ 1.9e+00  2.4e+00 -6.9e-01]
   [ 1.9e+00  2.3e+00 -8.8e-01]
   [ 1.8e+00  2.3e+00 -9.7e-01]
   [ 1.8e+00  2.4e+00 -1.0e+00]
   [ 1.9e+00  2.5e+00 -1.0e+00]
   [ 2.0e+00  2.5e+00 -9.8e-01]
   [ 2.1e+00  2.5e+00 -8.9e-01]
   [ 2.0e+00  2.4e+00 -8.3e-01]
   [ 2.0e+00  2.3e+00 -8.3e-01]
   [ 2.0e+00  2.2e+00 -1.0e+00]
   [ 1.9e+00  2.2e+00 -1.1e+00]
   [ 1.9e+00  2.3e+00 -1.2e+00]
   [ 2.0e+00  2.4e+00 -1.2e+00]
   [ 2.1e+00  2.4e+00 -1.1e+00]
   [ 2.2e+00  2.4e+00 -1.0e+00]
   [ 2.2e+00  2.3e+00 -9.7e-01]
   [ 2.1e+00  2.2e+00 -9.6e-01]
   [ 2.1e+00  2.1e+00 -1.1e+00]
   [ 2.0e+00  2.1e+00 -1.2e+00]
   [ 2.0e+00  2.2e+00 -1.3e+00]
   [ 2.1e+00  2.3e+00 -1.3e+00]
   [ 2.2e+00  2.3e+00 -1.2e+00]
   [ 2.3e+00  2.2e+00 -1.2e+00]
   [ 2.3e+00  2.2e+00 -1.1e+00]
   [ 2.2e+00  2.1e+00 -1.1e+00]
   [ 1.5e+00  2.8e+00  2.4e+00]
   [ 1.8e+00  2.6e+00  2.5e+00]
   [ 1.8e+00  2.6e+00  2.6e+00]
   [ 1.5e+00  2.8e+00  2.5e+00]
   [ 1.9e+00  3.3e+00  2.2e+00]
   [ 2.2e+00  3.1e+00  2.3e+00]
   [ 2.2e+00  3.2e+00  2.4e+00]
   [ 1.9e+00  3.3e+00  2.3e+00]
   [ 1.7e+00  2.6e+00  2.2e+00]
   [ 1.8e+00  2.3e+00  2.3e+00]
   [ 1.8e+00  2.3e+00  2.4e+00]
   [ 1.7e+00  2.6e+00  2.3e+00]
   [ 2.3e+00  2.9e+00  2.0e+00]
   [ 2.4e+00  2.6e+00  2.1e+00]
   [ 2.5e+00  2.6e+00  2.2e+00]
   [ 2.3e+00  2.9e+00  2.1e+00]
   [ 1.8e+00  2.6e+00  1.7e+00]
   [ 1.6e+00  2.3e+00  1.8e+00]
   [ 1.6e+00  2.3e+00  1.9e+00]
   [ 1.8e+00  2.6e+00  1.8e+00]
   [ 2.4e+00  2.3e+00  1.8e+00]
   [ 2.3e+00  2.0e+00  1.9e+00]
   [ 2.3e+00  2.0e+00  2.0e+00]
   [ 2.4e+00  2.3e+00  1.9e+00]
   [ 1.7e+00  2.2e+00  1.6e+00]
   [ 1.5e+00  1.9e+00  1.8e+00]
   [ 1.5e+00  2.0e+00  1.9e+00]
   [ 1.7e+00  2.2e+00  1.7e+00]
   [ 2.2e+00  1.7e+00  1.6e+00]
   [ 2.0e+00  1.5e+00  1.7e+00]
   [ 2.0e+00  1.5e+00  1.8e+00]
   [ 2.2e+00  1.8e+00  1.7e+00]
   [ 1.6e+00  2.0e+00  1.3e+00]
   [ 1.3e+00  2.0e+00  1.4e+00]
   [ 1.3e+00  2.0e+00  1.5e+00]
   [ 1.7e+00  2.0e+00  1.4e+00]
   [ 1.7e+00  1.3e+00  1.5e+00]
   [ 1.4e+00  1.3e+00  1.6e+00]
   [ 1.5e+00  1.3e+00  1.7e+00]
   [ 1.8e+00  1.4e+00  1.6e+00]
   [ 1.5e+00  1.9e+00  9.8e-01]
   [ 1.2e+00  2.1e+00  1.0e+00]
   [ 1.2e+00  2.1e+00  1.1e+00]
   [ 1.5e+00  1.9e+00  1.1e+00]
   [ 1.2e+00  1.3e+00  1.2e+00]
   [ 8.8e-01  1.5e+00  1.3e+00]
   [ 9.1e-01  1.5e+00  1.4e+00]
   [ 1.2e+00  1.3e+00  1.3e+00]
   [ 1.4e+00  1.6e+00  6.6e-01]
   [ 1.4e+00  2.0e+00  6.4e-01]
   [ 1.4e+00  2.0e+00  7.5e-01]
   [ 1.4e+00  1.6e+00  7.7e-01]
   [ 7.5e-01  1.5e+00  8.9e-01]
   [ 7.0e-01  1.9e+00  8.7e-01]
   [ 7.4e-01  1.9e+00  9.7e-01]
   [ 7.9e-01  1.6e+00  9.9e-01]
   [ 1.2e+00  1.7e+00  3.4e-01]
   [ 1.3e+00  2.0e+00  3.2e-01]
   [ 1.4e+00  2.0e+00  4.3e-01]
   [ 1.2e+00  1.7e+00  4.6e-01]
   [ 5.6e-01  2.0e+00  4.6e-01]
   [ 7.0e-01  2.3e+00  4.3e-01]
   [ 7.2e-01  2.3e+00  5.4e-01]
   [ 5.8e-01  2.0e+00  5.7e-01]
   [ 1.1e+00  1.8e+00  3.0e-03]
   [ 1.4e+00  2.0e+00 -2.3e-02]
   [ 1.4e+00  2.0e+00  8.9e-02]
   [ 1.1e+00  1.8e+00  1.2e-01]
   [ 7.1e-01  2.4e+00  5.7e-02]
   [ 1.0e+00  2.6e+00  3.0e-02]
   [ 1.0e+00  2.6e+00  1.4e-01]
   [ 7.3e-01  2.4e+00  1.7e-01]
   [ 1.1e+00  1.9e+00 -3.2e-01]
   [ 1.5e+00  2.0e+00 -3.9e-01]
   [ 1.5e+00  2.0e+00 -2.8e-01]
   [ 1.2e+00  1.9e+00 -2.1e-01]
   [ 9.6e-01  2.6e+00 -4.4e-01]
   [ 1.3e+00  2.6e+00 -5.1e-01]
   [ 1.3e+00  2.7e+00 -4.0e-01]
   [ 9.7e-01  2.6e+00 -3.3e-01]
   [ 1.2e+00  2.1e+00 -8.2e-01]
   [ 1.4e+00  1.9e+00 -7.5e-01]
   [ 1.4e+00  1.9e+00 -6.3e-01]
   [ 1.1e+00  2.1e+00 -7.0e-01]
   [ 1.6e+00  2.7e+00 -7.8e-01]
   [ 1.8e+00  2.5e+00 -7.1e-01]
   [ 1.8e+00  2.5e+00 -5.9e-01]
   [ 1.5e+00  2.7e+00 -6.6e-01]
   [ 1.3e+00  2.0e+00 -1.1e+00]
   [ 1.5e+00  1.7e+00 -1.0e+00]
   [ 1.5e+00  1.7e+00 -9.1e-01]
   [ 1.3e+00  2.0e+00 -9.7e-01]
   [ 1.9e+00  2.4e+00 -1.2e+00]
   [ 2.1e+00  2.1e+00 -1.1e+00]
   [ 2.1e+00  2.1e+00 -1.0e+00]
   [ 1.9e+00  2.4e+00 -1.1e+00]]
# ---
# name: test_selection_working[chain_id-1BNA].2
  tuple(
    456,
    3,
  )
# ---
# name: test_selection_working[chain_id-1BNA].3
  [[ 8.8e-01  1.2e+00 -9.6e-01]
   [ 8.3e-01  1.2e+00 -8.6e-01]
   [ 7.9e-01  1.1e+00 -7.9e-01]
   [ 7.8e-01  9.9e-01 -7.9e-01]
   [ 8.2e-01  9.1e-01 -8.6e-01]
   [ 8.7e-01  9.0e-01 -9.6e-01]
   [ 9.1e-01  9.8e-01 -1.0e+00]
   [ 9.2e-01  1.1e+00 -1.0e+00]
   [ 1.1e+00  1.2e+00 -8.7e-01]
   [ 1.0e+00  1.2e+00 -7.7e-01]
   [ 9.6e-01  1.1e+00 -7.0e-01]
   [ 9.5e-01  9.9e-01 -7.0e-01]
   [ 9.9e-01  9.0e-01 -7.7e-01]
   [ 1.0e+00  9.0e-01 -8.7e-01]
   [ 1.1e+00  9.7e-01 -9.4e-01]
   [ 1.1e+00  1.1e+00 -9.4e-01]
   [ 1.2e+00  1.2e+00 -7.8e-01]
   [ 1.2e+00  1.2e+00 -6.8e-01]
   [ 1.1e+00  1.1e+00 -6.0e-01]
   [ 1.1e+00  9.8e-01 -6.0e-01]
   [ 1.2e+00  9.0e-01 -6.6e-01]
   [ 1.2e+00  8.9e-01 -7.6e-01]
   [ 1.3e+00  9.7e-01 -8.4e-01]
   [ 1.3e+00  1.1e+00 -8.4e-01]
   [ 1.4e+00  1.2e+00 -6.8e-01]
   [ 1.3e+00  1.2e+00 -5.8e-01]
   [ 1.3e+00  1.1e+00 -5.0e-01]
   [ 1.3e+00  9.9e-01 -4.9e-01]
   [ 1.4e+00  9.1e-01 -5.5e-01]
   [ 1.4e+00  9.1e-01 -6.5e-01]
   [ 1.5e+00  9.8e-01 -7.3e-01]
   [ 1.5e+00  1.1e+00 -7.4e-01]
   [ 1.5e+00  1.2e+00 -5.9e-01]
   [ 1.5e+00  1.2e+00 -5.0e-01]
   [ 1.5e+00  1.1e+00 -4.1e-01]
   [ 1.5e+00  1.0e+00 -3.9e-01]
   [ 1.5e+00  9.5e-01 -4.5e-01]
   [ 1.6e+00  9.5e-01 -5.4e-01]
   [ 1.6e+00  1.0e+00 -6.2e-01]
   [ 1.6e+00  1.1e+00 -6.4e-01]
   [ 1.7e+00  1.3e+00 -5.2e-01]
   [ 1.6e+00  1.3e+00 -4.3e-01]
   [ 1.6e+00  1.2e+00 -3.4e-01]
   [ 1.6e+00  1.1e+00 -3.1e-01]
   [ 1.7e+00  1.0e+00 -3.5e-01]
   [ 1.7e+00  1.0e+00 -4.4e-01]
   [ 1.8e+00  1.1e+00 -5.3e-01]
   [ 1.7e+00  1.2e+00 -5.6e-01]
   [ 1.7e+00  1.3e+00 -4.5e-01]
   [ 1.7e+00  1.3e+00 -3.6e-01]
   [ 1.6e+00  1.3e+00 -2.7e-01]
   [ 1.7e+00  1.2e+00 -2.3e-01]
   [ 1.8e+00  1.1e+00 -2.6e-01]
   [ 1.9e+00  1.1e+00 -3.5e-01]
   [ 1.9e+00  1.2e+00 -4.4e-01]
   [ 1.8e+00  1.3e+00 -4.8e-01]
   [ 1.8e+00  1.4e+00 -3.9e-01]
   [ 1.7e+00  1.4e+00 -3.0e-01]
   [ 1.7e+00  1.3e+00 -2.0e-01]
   [ 1.8e+00  1.3e+00 -1.5e-01]
   [ 1.9e+00  1.2e+00 -1.8e-01]
   [ 1.9e+00  1.2e+00 -2.7e-01]
   [ 2.0e+00  1.3e+00 -3.6e-01]
   [ 1.9e+00  1.3e+00 -4.1e-01]
   [ 1.9e+00  1.5e+00 -3.1e-01]
   [ 1.8e+00  1.5e+00 -2.2e-01]
   [ 1.8e+00  1.5e+00 -1.2e-01]
   [ 1.9e+00  1.4e+00 -7.4e-02]
   [ 2.0e+00  1.3e+00 -1.0e-01]
   [ 2.0e+00  1.3e+00 -1.9e-01]
   [ 2.0e+00  1.4e+00 -2.9e-01]
   [ 2.0e+00  1.5e+00 -3.4e-01]
   [ 2.0e+00  1.6e+00 -2.4e-01]
   [ 1.9e+00  1.6e+00 -1.5e-01]
   [ 1.9e+00  1.6e+00 -4.9e-02]
   [ 2.0e+00  1.5e+00  1.4e-03]
   [ 2.1e+00  1.4e+00 -2.8e-02]
   [ 2.1e+00  1.4e+00 -1.2e-01]
   [ 2.1e+00  1.5e+00 -2.2e-01]
   [ 2.1e+00  1.6e+00 -2.7e-01]
   [ 2.1e+00  1.7e+00 -1.9e-01]
   [ 2.0e+00  1.7e+00 -9.8e-02]
   [ 2.0e+00  1.7e+00  5.6e-03]
   [ 2.1e+00  1.6e+00  6.1e-02]
   [ 2.2e+00  1.5e+00  3.5e-02]
   [ 2.2e+00  1.5e+00 -5.6e-02]
   [ 2.2e+00  1.6e+00 -1.6e-01]
   [ 2.2e+00  1.7e+00 -2.1e-01]
   [ 2.1e+00  1.8e+00 -1.4e-01]
   [ 2.0e+00  1.8e+00 -5.7e-02]
   [ 2.0e+00  1.8e+00  4.9e-02]
   [ 2.1e+00  1.7e+00  1.1e-01]
   [ 2.2e+00  1.7e+00  9.4e-02]
   [ 2.3e+00  1.7e+00  7.2e-03]
   [ 2.3e+00  1.7e+00 -9.9e-02]
   [ 2.2e+00  1.8e+00 -1.6e-01]
   [ 2.1e+00  1.9e+00 -9.8e-02]
   [ 2.1e+00  1.9e+00 -1.5e-02]
   [ 2.1e+00  1.9e+00  9.4e-02]
   [ 2.2e+00  1.9e+00  1.7e-01]
   [ 2.3e+00  1.8e+00  1.6e-01]
   [ 2.4e+00  1.9e+00  7.4e-02]
   [ 2.3e+00  1.9e+00 -3.6e-02]
   [ 2.3e+00  1.9e+00 -1.1e-01]
   [ 2.1e+00  2.1e+00 -6.4e-02]
   [ 2.1e+00  2.1e+00  1.8e-02]
   [ 2.1e+00  2.0e+00  1.3e-01]
   [ 2.2e+00  2.0e+00  2.1e-01]
   [ 2.3e+00  2.0e+00  2.1e-01]
   [ 2.4e+00  2.1e+00  1.2e-01]
   [ 2.3e+00  2.1e+00  1.2e-02]
   [ 2.3e+00  2.1e+00 -6.6e-02]
   [ 2.1e+00  2.2e+00 -4.6e-02]
   [ 2.0e+00  2.2e+00  3.3e-02]
   [ 2.0e+00  2.1e+00  1.5e-01]
   [ 2.1e+00  2.2e+00  2.3e-01]
   [ 2.2e+00  2.2e+00  2.3e-01]
   [ 2.3e+00  2.2e+00  1.5e-01]
   [ 2.3e+00  2.3e+00  3.7e-02]
   [ 2.2e+00  2.2e+00 -4.4e-02]
   [ 2.1e+00  2.3e+00 -2.2e-02]
   [ 2.0e+00  2.3e+00  5.3e-02]
   [ 2.0e+00  2.3e+00  1.6e-01]
   [ 2.1e+00  2.3e+00  2.5e-01]
   [ 2.2e+00  2.3e+00  2.5e-01]
   [ 2.2e+00  2.4e+00  1.8e-01]
   [ 2.2e+00  2.4e+00  6.6e-02]
   [ 2.2e+00  2.4e+00 -1.7e-02]
   [ 2.0e+00  2.5e+00  2.9e-02]
   [ 1.9e+00  2.4e+00  9.9e-02]
   [ 1.9e+00  2.4e+00  2.1e-01]
   [ 2.0e+00  2.4e+00  2.9e-01]
   [ 2.1e+00  2.5e+00  3.0e-01]
   [ 2.2e+00  2.5e+00  2.3e-01]
   [ 2.1e+00  2.6e+00  1.2e-01]
   [ 2.1e+00  2.6e+00  3.8e-02]
   [ 1.9e+00  2.6e+00  9.6e-02]
   [ 1.8e+00  2.5e+00  1.6e-01]
   [ 1.8e+00  2.5e+00  2.6e-01]
   [ 1.9e+00  2.5e+00  3.4e-01]
   [ 2.0e+00  2.6e+00  3.6e-01]
   [ 2.1e+00  2.7e+00  3.0e-01]
   [ 2.0e+00  2.7e+00  1.9e-01]
   [ 2.0e+00  2.7e+00  1.1e-01]
   [ 1.8e+00  2.7e+00  1.6e-01]
   [ 1.7e+00  2.6e+00  2.2e-01]
   [ 1.8e+00  2.5e+00  3.1e-01]
   [ 1.8e+00  2.6e+00  4.0e-01]
   [ 1.9e+00  2.7e+00  4.2e-01]
   [ 1.9e+00  2.8e+00  3.7e-01]
   [ 1.9e+00  2.8e+00  2.7e-01]
   [ 1.8e+00  2.8e+00  1.9e-01]
   [ 1.7e+00  2.8e+00  2.4e-01]
   [ 1.6e+00  2.7e+00  2.9e-01]
   [ 1.7e+00  2.6e+00  3.8e-01]
   [ 1.7e+00  2.6e+00  4.6e-01]
   [ 1.8e+00  2.7e+00  4.9e-01]
   [ 1.8e+00  2.8e+00  4.5e-01]
   [ 1.8e+00  2.9e+00  3.6e-01]
   [ 1.7e+00  2.9e+00  2.7e-01]
   [ 1.5e+00  2.8e+00  3.4e-01]
   [ 1.5e+00  2.7e+00  3.8e-01]
   [ 1.6e+00  2.6e+00  4.6e-01]
   [ 1.6e+00  2.7e+00  5.5e-01]
   [ 1.7e+00  2.8e+00  5.8e-01]
   [ 1.7e+00  2.9e+00  5.5e-01]
   [ 1.7e+00  2.9e+00  4.6e-01]
   [ 1.6e+00  2.9e+00  3.8e-01]
   [ 1.4e+00  2.8e+00  4.4e-01]
   [ 1.4e+00  2.7e+00  4.7e-01]
   [ 1.5e+00  2.7e+00  5.5e-01]
   [ 1.5e+00  2.7e+00  6.4e-01]
   [ 1.6e+00  2.8e+00  6.8e-01]
   [ 1.6e+00  2.9e+00  6.5e-01]
   [ 1.5e+00  3.0e+00  5.7e-01]
   [ 1.4e+00  2.9e+00  4.9e-01]
   [ 1.3e+00  2.9e+00  5.4e-01]
   [ 1.3e+00  2.7e+00  5.6e-01]
   [ 1.4e+00  2.7e+00  6.3e-01]
   [ 1.4e+00  2.7e+00  7.1e-01]
   [ 1.5e+00  2.8e+00  7.6e-01]
   [ 1.5e+00  2.9e+00  7.5e-01]
   [ 1.4e+00  3.0e+00  6.8e-01]
   [ 1.3e+00  3.0e+00  5.9e-01]
   [ 1.2e+00  2.8e+00  6.5e-01]
   [ 1.2e+00  2.7e+00  6.5e-01]
   [ 1.3e+00  2.7e+00  7.2e-01]
   [ 1.3e+00  2.7e+00  8.0e-01]
   [ 1.4e+00  2.8e+00  8.5e-01]
   [ 1.3e+00  2.9e+00  8.5e-01]
   [ 1.3e+00  3.0e+00  7.9e-01]
   [ 1.2e+00  2.9e+00  7.0e-01]
   [ 1.0e+00  2.8e+00  7.7e-01]
   [ 1.1e+00  2.7e+00  7.7e-01]
   [ 1.2e+00  2.6e+00  8.2e-01]
   [ 1.2e+00  2.7e+00  9.1e-01]
   [ 1.3e+00  2.8e+00  9.6e-01]
   [ 1.2e+00  2.9e+00  9.7e-01]
   [ 1.1e+00  2.9e+00  9.1e-01]
   [ 1.1e+00  2.9e+00  8.3e-01]
   [ 9.3e-01  2.8e+00  8.9e-01]
   [ 9.7e-01  2.7e+00  8.8e-01]
   [ 1.1e+00  2.6e+00  9.3e-01]
   [ 1.1e+00  2.6e+00  1.0e+00]
   [ 1.2e+00  2.7e+00  1.1e+00]
   [ 1.1e+00  2.8e+00  1.1e+00]
   [ 1.0e+00  2.9e+00  1.0e+00]
   [ 9.6e-01  2.9e+00  9.5e-01]
   [ 8.4e-01  2.7e+00  1.0e+00]
   [ 8.9e-01  2.6e+00  9.8e-01]
   [ 9.8e-01  2.6e+00  1.0e+00]
   [ 1.1e+00  2.6e+00  1.1e+00]
   [ 1.1e+00  2.7e+00  1.2e+00]
   [ 1.0e+00  2.8e+00  1.2e+00]
   [ 9.4e-01  2.8e+00  1.1e+00]
   [ 8.6e-01  2.8e+00  1.1e+00]
   [ 7.6e-01  2.6e+00  1.1e+00]
   [ 8.1e-01  2.5e+00  1.1e+00]
   [ 9.1e-01  2.5e+00  1.1e+00]
   [ 1.0e+00  2.5e+00  1.2e+00]
   [ 1.0e+00  2.6e+00  1.3e+00]
   [ 9.6e-01  2.7e+00  1.3e+00]
   [ 8.6e-01  2.8e+00  1.3e+00]
   [ 7.8e-01  2.7e+00  1.2e+00]
   [ 6.9e-01  2.6e+00  1.3e+00]
   [ 7.5e-01  2.5e+00  1.2e+00]
   [ 8.5e-01  2.4e+00  1.2e+00]
   [ 9.4e-01  2.5e+00  1.3e+00]
   [ 9.7e-01  2.5e+00  1.4e+00]
   [ 9.1e-01  2.6e+00  1.4e+00]
   [ 8.0e-01  2.7e+00  1.4e+00]
   [ 7.1e-01  2.6e+00  1.3e+00]
   [ 6.4e-01  2.5e+00  1.4e+00]
   [ 7.0e-01  2.4e+00  1.3e+00]
   [ 8.2e-01  2.3e+00  1.3e+00]
   [ 9.1e-01  2.4e+00  1.4e+00]
   [ 9.3e-01  2.5e+00  1.5e+00]
   [ 8.7e-01  2.5e+00  1.5e+00]
   [ 7.5e-01  2.6e+00  1.5e+00]
   [ 6.6e-01  2.5e+00  1.5e+00]
   [ 6.2e-01  2.4e+00  1.5e+00]
   [ 6.8e-01  2.3e+00  1.5e+00]
   [ 8.0e-01  2.3e+00  1.5e+00]
   [ 8.9e-01  2.3e+00  1.5e+00]
   [ 9.1e-01  2.4e+00  1.6e+00]
   [ 8.5e-01  2.5e+00  1.6e+00]
   [ 7.4e-01  2.5e+00  1.6e+00]
   [ 6.4e-01  2.4e+00  1.6e+00]
   [ 6.2e-01  2.3e+00  1.6e+00]
   [ 6.8e-01  2.2e+00  1.6e+00]
   [ 8.0e-01  2.2e+00  1.6e+00]
   [ 8.9e-01  2.2e+00  1.6e+00]
   [ 9.1e-01  2.3e+00  1.7e+00]
   [ 8.5e-01  2.4e+00  1.7e+00]
   [ 7.3e-01  2.4e+00  1.7e+00]
   [ 6.4e-01  2.4e+00  1.7e+00]
   [ 6.3e-01  2.2e+00  1.8e+00]
   [ 7.0e-01  2.1e+00  1.7e+00]
   [ 8.1e-01  2.1e+00  1.7e+00]
   [ 9.0e-01  2.1e+00  1.7e+00]
   [ 9.2e-01  2.2e+00  1.8e+00]
   [ 8.6e-01  2.3e+00  1.8e+00]
   [ 7.4e-01  2.3e+00  1.9e+00]
   [ 6.5e-01  2.3e+00  1.8e+00]
   [ 6.5e-01  2.1e+00  1.9e+00]
   [ 7.1e-01  2.0e+00  1.9e+00]
   [ 8.3e-01  2.0e+00  1.9e+00]
   [ 9.2e-01  2.1e+00  1.9e+00]
   [ 9.4e-01  2.2e+00  1.9e+00]
   [ 8.7e-01  2.3e+00  2.0e+00]
   [ 7.6e-01  2.3e+00  2.0e+00]
   [ 6.7e-01  2.2e+00  2.0e+00]
   [ 6.8e-01  2.1e+00  2.1e+00]
   [ 7.4e-01  2.0e+00  2.1e+00]
   [ 8.5e-01  2.0e+00  2.0e+00]
   [ 9.4e-01  2.0e+00  2.0e+00]
   [ 9.6e-01  2.2e+00  2.0e+00]
   [ 8.9e-01  2.2e+00  2.1e+00]
   [ 7.8e-01  2.2e+00  2.1e+00]
   [ 6.9e-01  2.2e+00  2.1e+00]
   [ 7.2e-01  2.0e+00  2.2e+00]
   [ 7.9e-01  1.9e+00  2.2e+00]
   [ 8.9e-01  1.9e+00  2.1e+00]
   [ 9.8e-01  2.0e+00  2.1e+00]
   [ 9.9e-01  2.1e+00  2.2e+00]
   [ 9.3e-01  2.2e+00  2.2e+00]
   [ 8.3e-01  2.2e+00  2.3e+00]
   [ 7.4e-01  2.1e+00  2.3e+00]
   [ 8.0e-01  2.0e+00  2.4e+00]
   [ 8.5e-01  1.9e+00  2.3e+00]
   [ 9.5e-01  1.9e+00  2.3e+00]
   [ 1.0e+00  2.0e+00  2.2e+00]
   [ 1.1e+00  2.1e+00  2.3e+00]
   [ 1.0e+00  2.2e+00  2.3e+00]
   [ 9.0e-01  2.2e+00  2.4e+00]
   [ 8.2e-01  2.1e+00  2.4e+00]
   [ 8.9e-01  1.9e+00  2.5e+00]
   [ 9.4e-01  1.8e+00  2.4e+00]
   [ 1.0e+00  1.8e+00  2.4e+00]
   [ 1.1e+00  1.9e+00  2.3e+00]
   [ 1.1e+00  2.0e+00  2.4e+00]
   [ 1.1e+00  2.1e+00  2.5e+00]
   [ 1.0e+00  2.1e+00  2.5e+00]
   [ 9.2e-01  2.0e+00  2.6e+00]
   [ 1.0e+00  1.8e+00  2.6e+00]
   [ 1.0e+00  1.8e+00  2.5e+00]
   [ 1.1e+00  1.8e+00  2.4e+00]
   [ 1.2e+00  1.9e+00  2.4e+00]
   [ 1.2e+00  2.0e+00  2.5e+00]
   [ 1.2e+00  2.0e+00  2.6e+00]
   [ 1.1e+00  2.0e+00  2.6e+00]
   [ 1.0e+00  1.9e+00  2.7e+00]
   [ 1.1e+00  1.7e+00  2.7e+00]
   [ 1.2e+00  1.7e+00  2.6e+00]
   [ 1.2e+00  1.7e+00  2.5e+00]
   [ 1.3e+00  1.8e+00  2.5e+00]
   [ 1.3e+00  1.9e+00  2.5e+00]
   [ 1.3e+00  2.0e+00  2.6e+00]
   [ 1.2e+00  1.9e+00  2.7e+00]
   [ 1.1e+00  1.9e+00  2.7e+00]
   [ 1.3e+00  1.7e+00  2.8e+00]
   [ 1.3e+00  1.6e+00  2.7e+00]
   [ 1.4e+00  1.7e+00  2.6e+00]
   [ 1.4e+00  1.8e+00  2.6e+00]
   [ 1.4e+00  1.9e+00  2.6e+00]
   [ 1.4e+00  1.9e+00  2.7e+00]
   [ 1.3e+00  1.9e+00  2.8e+00]
   [ 1.3e+00  1.8e+00  2.8e+00]
   [ 1.4e+00  1.7e+00  2.9e+00]
   [ 1.5e+00  1.6e+00  2.8e+00]
   [ 1.5e+00  1.7e+00  2.8e+00]
   [ 1.6e+00  1.8e+00  2.7e+00]
   [ 1.6e+00  1.9e+00  2.7e+00]
   [ 1.5e+00  1.9e+00  2.8e+00]
   [ 1.4e+00  1.9e+00  2.9e+00]
   [ 1.4e+00  1.8e+00  2.9e+00]
   [ 1.6e+00  1.7e+00  3.0e+00]
   [ 1.7e+00  1.7e+00  3.0e+00]
   [ 1.7e+00  1.7e+00  2.9e+00]
   [ 1.7e+00  1.8e+00  2.8e+00]
   [ 1.7e+00  1.9e+00  2.8e+00]
   [ 1.7e+00  2.0e+00  2.9e+00]
   [ 1.6e+00  1.9e+00  3.0e+00]
   [ 1.6e+00  1.9e+00  3.0e+00]
   [ 1.8e+00  1.8e+00  3.1e+00]
   [ 1.8e+00  1.7e+00  3.1e+00]
   [ 1.9e+00  1.7e+00  3.0e+00]
   [ 1.9e+00  1.8e+00  2.9e+00]
   [ 1.9e+00  1.9e+00  2.9e+00]
   [ 1.8e+00  2.0e+00  3.0e+00]
   [ 1.8e+00  2.0e+00  3.1e+00]
   [ 1.7e+00  1.9e+00  3.1e+00]
   [ 1.9e+00  1.8e+00  3.2e+00]
   [ 2.0e+00  1.8e+00  3.2e+00]
   [ 2.1e+00  1.8e+00  3.1e+00]
   [ 2.1e+00  1.9e+00  3.0e+00]
   [ 2.0e+00  2.0e+00  3.0e+00]
   [ 2.0e+00  2.0e+00  3.1e+00]
   [ 1.9e+00  2.0e+00  3.2e+00]
   [ 1.9e+00  1.9e+00  3.2e+00]
   [ 9.0e-01  1.8e+00 -8.3e-01]
   [ 1.3e+00  1.8e+00 -8.1e-01]
   [ 1.3e+00  1.8e+00 -9.2e-01]
   [ 9.0e-01  1.8e+00 -9.4e-01]
   [ 8.3e-01  1.1e+00 -7.6e-01]
   [ 1.2e+00  1.1e+00 -7.4e-01]
   [ 1.2e+00  1.1e+00 -8.5e-01]
   [ 8.4e-01  1.1e+00 -8.7e-01]
   [ 1.2e+00  1.7e+00 -4.7e-01]
   [ 1.6e+00  1.8e+00 -5.5e-01]
   [ 1.6e+00  1.8e+00 -6.6e-01]
   [ 1.2e+00  1.7e+00 -5.8e-01]
   [ 1.4e+00  1.1e+00 -4.2e-01]
   [ 1.7e+00  1.1e+00 -5.0e-01]
   [ 1.7e+00  1.1e+00 -6.1e-01]
   [ 1.4e+00  1.0e+00 -5.3e-01]
   [ 1.2e+00  1.5e+00  2.2e-02]
   [ 1.4e+00  1.8e+00 -9.8e-02]
   [ 1.3e+00  1.8e+00 -2.0e-01]
   [ 1.2e+00  1.5e+00 -8.2e-02]
   [ 1.9e+00  1.3e+00 -9.4e-02]
   [ 2.0e+00  1.6e+00 -2.1e-01]
   [ 2.0e+00  1.6e+00 -3.2e-01]
   [ 1.9e+00  1.2e+00 -2.0e-01]
   [ 1.5e+00  1.8e+00  2.0e-01]
   [ 1.5e+00  2.1e+00  6.0e-02]
   [ 1.5e+00  2.1e+00 -4.3e-02]
   [ 1.5e+00  1.8e+00  1.0e-01]
   [ 2.2e+00  1.8e+00  1.5e-01]
   [ 2.2e+00  2.1e+00  9.2e-03]
   [ 2.2e+00  2.0e+00 -9.4e-02]
   [ 2.2e+00  1.7e+00  4.9e-02]
   [ 1.6e+00  2.0e+00  4.6e-01]
   [ 1.4e+00  2.2e+00  3.6e-01]
   [ 1.4e+00  2.2e+00  2.6e-01]
   [ 1.6e+00  1.9e+00  3.6e-01]
   [ 2.1e+00  2.4e+00  2.6e-01]
   [ 1.9e+00  2.6e+00  1.7e-01]
   [ 1.9e+00  2.6e+00  6.3e-02]
   [ 2.1e+00  2.3e+00  1.6e-01]
   [ 1.6e+00  2.1e+00  7.7e-01]
   [ 1.3e+00  2.2e+00  7.5e-01]
   [ 1.3e+00  2.2e+00  6.4e-01]
   [ 1.6e+00  2.1e+00  6.6e-01]
   [ 1.8e+00  2.8e+00  5.2e-01]
   [ 1.4e+00  2.8e+00  5.0e-01]
   [ 1.4e+00  2.8e+00  4.0e-01]
   [ 1.8e+00  2.7e+00  4.2e-01]
   [ 1.7e+00  2.4e+00  1.1e+00]
   [ 1.4e+00  2.2e+00  1.2e+00]
   [ 1.4e+00  2.1e+00  1.0e+00]
   [ 1.7e+00  2.3e+00  1.0e+00]
   [ 1.3e+00  2.9e+00  9.0e-01]
   [ 1.0e+00  2.7e+00  9.4e-01]
   [ 1.0e+00  2.7e+00  8.4e-01]
   [ 1.3e+00  2.9e+00  7.9e-01]
   [ 1.5e+00  2.5e+00  1.4e+00]
   [ 1.4e+00  2.1e+00  1.5e+00]
   [ 1.4e+00  2.1e+00  1.4e+00]
   [ 1.5e+00  2.4e+00  1.3e+00]
   [ 8.9e-01  2.7e+00  1.3e+00]
   [ 7.6e-01  2.4e+00  1.4e+00]
   [ 7.6e-01  2.4e+00  1.3e+00]
   [ 8.9e-01  2.7e+00  1.2e+00]
   [ 1.4e+00  2.6e+00  1.7e+00]
   [ 1.5e+00  2.2e+00  1.8e+00]
   [ 1.5e+00  2.2e+00  1.7e+00]
   [ 1.4e+00  2.5e+00  1.6e+00]
   [ 7.4e-01  2.4e+00  1.8e+00]
   [ 8.3e-01  2.0e+00  1.9e+00]
   [ 8.2e-01  2.0e+00  1.8e+00]
   [ 7.3e-01  2.4e+00  1.7e+00]
   [ 1.5e+00  2.4e+00  2.1e+00]
   [ 1.6e+00  2.1e+00  2.2e+00]
   [ 1.6e+00  2.1e+00  2.1e+00]
   [ 1.4e+00  2.4e+00  2.0e+00]
   [ 8.6e-01  2.2e+00  2.3e+00]
   [ 1.0e+00  1.9e+00  2.4e+00]
   [ 1.0e+00  1.9e+00  2.3e+00]
   [ 8.3e-01  2.2e+00  2.2e+00]
   [ 1.3e+00  2.5e+00  2.5e+00]
   [ 1.7e+00  2.4e+00  2.5e+00]
   [ 1.6e+00  2.4e+00  2.4e+00]
   [ 1.3e+00  2.5e+00  2.4e+00]
   [ 1.2e+00  1.9e+00  2.8e+00]
   [ 1.5e+00  1.8e+00  2.7e+00]
   [ 1.5e+00  1.7e+00  2.6e+00]
   [ 1.2e+00  1.8e+00  2.7e+00]
   [ 1.5e+00  2.6e+00  2.9e+00]
   [ 1.8e+00  2.6e+00  2.8e+00]
   [ 1.8e+00  2.6e+00  2.7e+00]
   [ 1.5e+00  2.5e+00  2.8e+00]
   [ 1.7e+00  1.9e+00  3.1e+00]
   [ 2.0e+00  2.0e+00  3.0e+00]
   [ 2.0e+00  1.9e+00  2.9e+00]
   [ 1.6e+00  1.9e+00  3.0e+00]]
# ---
# name: test_selection_working[chain_id-4ozs]
  tuple(
    6680,
    3,
  )
# ---
# name: test_selection_working[chain_id-4ozs].1
  [[ 4.2  1.2 -1.6]
   [ 4.2  1.3 -1.6]
   [ 3.9  1.3 -1.8]
   ...
   [ 3.6 -1.4  2.5]
   [ 3.6 -1.4  2.5]
   [ 3.6 -1.4  2.5]]
# ---
# name: test_selection_working[chain_id-8H1B]
  tuple(
    8418,
    3,
  )
# ---
# name: test_selection_working[chain_id-8H1B].1
  [[ 0.7  0.4  2.8]
   [ 0.7  0.4  2.7]
   [ 0.7  0.2  3.0]
   ...
   [-2.0  1.4  1.2]
   [-2.0  1.5  1.2]
   [-2.0  1.5  1.2]]
# ---
# name: test_selection_working[chain_id-8H1B].2
  tuple(
    8622,
    3,
  )
# ---
# name: test_selection_working[chain_id-8H1B].3
  [[ 0.1  0.1  1.0]
   [ 0.0  0.1  1.1]
   [-0.3  0.1  1.0]
   ...
   [ 2.4 -2.5  2.6]
   [ 2.3 -2.5  2.6]
   [ 2.3 -2.5  2.6]]
# ---
# name: test_selection_working[chain_id-8H1B].4
  tuple(
    656,
    3,
  )
# ---
# name: test_selection_working[chain_id-8H1B].5
  [[ 9.9e-01 -1.2e+00  5.1e+00]
   [ 1.0e+00 -1.2e+00  5.2e+00]
   [ 1.0e+00 -1.2e+00  5.3e+00]
   [ 1.1e+00 -1.1e+00  5.3e+00]
   [ 1.1e+00 -9.8e-01  5.2e+00]
   [ 1.1e+00 -9.7e-01  5.1e+00]
   [ 1.1e+00 -1.0e+00  5.0e+00]
   [ 1.0e+00 -1.1e+00  5.0e+00]
   [ 8.2e-01 -1.2e+00  5.1e+00]
   [ 8.2e-01 -1.2e+00  5.3e+00]
   [ 8.6e-01 -1.1e+00  5.3e+00]
   [ 9.0e-01 -9.9e-01  5.3e+00]
   [ 9.3e-01 -9.1e-01  5.3e+00]
   [ 9.2e-01 -9.0e-01  5.1e+00]
   [ 8.8e-01 -9.7e-01  5.1e+00]
   [ 8.4e-01 -1.1e+00  5.1e+00]
   [ 6.3e-01 -1.1e+00  5.2e+00]
   [ 6.3e-01 -1.1e+00  5.3e+00]
   [ 6.7e-01 -1.0e+00  5.4e+00]
   [ 7.2e-01 -9.1e-01  5.4e+00]
   [ 7.5e-01 -8.3e-01  5.3e+00]
   [ 7.4e-01 -8.3e-01  5.2e+00]
   [ 7.0e-01 -9.0e-01  5.1e+00]
   [ 6.5e-01 -1.0e+00  5.1e+00]
   [ 4.4e-01 -9.9e-01  5.2e+00]
   [ 4.4e-01 -9.9e-01  5.3e+00]
   [ 4.9e-01 -9.3e-01  5.4e+00]
   [ 5.4e-01 -8.3e-01  5.4e+00]
   [ 5.8e-01 -7.5e-01  5.3e+00]
   [ 5.7e-01 -7.5e-01  5.2e+00]
   [ 5.3e-01 -8.1e-01  5.1e+00]
   [ 4.7e-01 -9.1e-01  5.1e+00]
   [ 2.7e-01 -8.8e-01  5.2e+00]
   [ 2.7e-01 -8.8e-01  5.3e+00]
   [ 3.3e-01 -8.2e-01  5.4e+00]
   [ 4.0e-01 -7.3e-01  5.4e+00]
   [ 4.4e-01 -6.6e-01  5.3e+00]
   [ 4.4e-01 -6.6e-01  5.2e+00]
   [ 3.9e-01 -7.2e-01  5.1e+00]
   [ 3.2e-01 -8.1e-01  5.1e+00]
   [ 1.4e-01 -7.6e-01  5.2e+00]
   [ 1.4e-01 -7.6e-01  5.3e+00]
   [ 2.0e-01 -7.1e-01  5.4e+00]
   [ 2.9e-01 -6.3e-01  5.4e+00]
   [ 3.5e-01 -5.7e-01  5.3e+00]
   [ 3.4e-01 -5.7e-01  5.2e+00]
   [ 2.8e-01 -6.2e-01  5.1e+00]
   [ 2.0e-01 -7.0e-01  5.1e+00]
   [ 4.2e-02 -6.3e-01  5.2e+00]
   [ 4.3e-02 -6.3e-01  5.3e+00]
   [ 1.1e-01 -5.9e-01  5.4e+00]
   [ 2.1e-01 -5.2e-01  5.4e+00]
   [ 2.7e-01 -4.8e-01  5.3e+00]
   [ 2.7e-01 -4.8e-01  5.2e+00]
   [ 2.1e-01 -5.2e-01  5.1e+00]
   [ 1.1e-01 -5.9e-01  5.1e+00]
   [-3.2e-02 -5.0e-01  5.2e+00]
   [-3.4e-02 -4.9e-01  5.3e+00]
   [ 3.8e-02 -4.5e-01  5.4e+00]
   [ 1.4e-01 -4.0e-01  5.4e+00]
   [ 2.2e-01 -3.7e-01  5.3e+00]
   [ 2.2e-01 -3.8e-01  5.2e+00]
   [ 1.5e-01 -4.2e-01  5.1e+00]
   [ 4.3e-02 -4.7e-01  5.1e+00]
   [-9.6e-02 -3.5e-01  5.2e+00]
   [-1.0e-01 -3.4e-01  5.3e+00]
   [-2.7e-02 -3.0e-01  5.4e+00]
   [ 8.0e-02 -2.6e-01  5.4e+00]
   [ 1.6e-01 -2.4e-01  5.3e+00]
   [ 1.6e-01 -2.5e-01  5.2e+00]
   [ 9.0e-02 -2.8e-01  5.1e+00]
   [-1.7e-02 -3.2e-01  5.1e+00]
   [-1.5e-01 -1.9e-01  5.2e+00]
   [-1.5e-01 -1.7e-01  5.3e+00]
   [-8.0e-02 -1.4e-01  5.4e+00]
   [ 3.1e-02 -1.1e-01  5.4e+00]
   [ 1.1e-01 -1.0e-01  5.3e+00]
   [ 1.2e-01 -1.2e-01  5.2e+00]
   [ 4.4e-02 -1.5e-01  5.1e+00]
   [-6.7e-02 -1.8e-01  5.1e+00]
   [-1.8e-01 -4.1e-02  5.1e+00]
   [-1.9e-01 -2.0e-02  5.3e+00]
   [-1.1e-01  6.2e-03  5.3e+00]
   [ 3.7e-03  2.2e-02  5.3e+00]
   [ 8.9e-02  1.9e-02  5.3e+00]
   [ 9.6e-02 -1.7e-03  5.2e+00]
   [ 2.0e-02 -2.8e-02  5.1e+00]
   [-9.4e-02 -4.4e-02  5.1e+00]
   [-1.9e-01  1.0e-01  5.1e+00]
   [-2.0e-01  1.3e-01  5.2e+00]
   [-1.2e-01  1.6e-01  5.3e+00]
   [-6.4e-03  1.6e-01  5.3e+00]
   [ 8.0e-02  1.4e-01  5.2e+00]
   [ 8.8e-02  1.1e-01  5.1e+00]
   [ 1.2e-02  8.5e-02  5.0e+00]
   [-1.0e-01  8.1e-02  5.0e+00]
   [-1.8e-01  2.5e-01  5.1e+00]
   [-1.9e-01  3.0e-01  5.2e+00]
   [-1.2e-01  3.2e-01  5.2e+00]
   [-2.0e-03  3.2e-01  5.3e+00]
   [ 8.4e-02  2.8e-01  5.2e+00]
   [ 9.1e-02  2.4e-01  5.1e+00]
   [ 1.6e-02  2.1e-01  5.0e+00]
   [-9.8e-02  2.2e-01  5.0e+00]
   [-1.7e-01  4.0e-01  5.0e+00]
   [-1.7e-01  4.5e-01  5.1e+00]
   [-9.6e-02  4.8e-01  5.2e+00]
   [ 1.7e-02  4.6e-01  5.2e+00]
   [ 1.0e-01  4.2e-01  5.1e+00]
   [ 1.1e-01  3.6e-01  5.0e+00]
   [ 3.2e-02  3.4e-01  4.9e+00]
   [-8.1e-02  3.5e-01  4.9e+00]
   [-1.3e-01  5.2e-01  4.9e+00]
   [-1.4e-01  5.9e-01  5.0e+00]
   [-5.9e-02  6.1e-01  5.1e+00]
   [ 5.1e-02  5.9e-01  5.1e+00]
   [ 1.3e-01  5.3e-01  5.1e+00]
   [ 1.3e-01  4.6e-01  5.0e+00]
   [ 5.9e-02  4.3e-01  4.9e+00]
   [-5.2e-02  4.6e-01  4.9e+00]
   [-8.9e-02  6.2e-01  4.8e+00]
   [-8.7e-02  7.0e-01  4.9e+00]
   [-9.3e-03  7.3e-01  5.0e+00]
   [ 9.9e-02  7.0e-01  5.0e+00]
   [ 1.7e-01  6.3e-01  5.0e+00]
   [ 1.7e-01  5.5e-01  4.9e+00]
   [ 9.5e-02  5.2e-01  4.8e+00]
   [-1.4e-02  5.5e-01  4.8e+00]
   [-3.9e-02  7.2e-01  4.7e+00]
   [-3.2e-02  8.1e-01  4.8e+00]
   [ 4.9e-02  8.5e-01  4.9e+00]
   [ 1.6e-01  8.1e-01  4.9e+00]
   [ 2.3e-01  7.3e-01  4.9e+00]
   [ 2.2e-01  6.4e-01  4.8e+00]
   [ 1.4e-01  6.0e-01  4.7e+00]
   [ 3.1e-02  6.4e-01  4.7e+00]
   [ 2.2e-02  8.0e-01  4.6e+00]
   [ 3.5e-02  9.0e-01  4.7e+00]
   [ 1.2e-01  9.4e-01  4.8e+00]
   [ 2.2e-01  9.0e-01  4.8e+00]
   [ 2.8e-01  8.1e-01  4.8e+00]
   [ 2.7e-01  7.1e-01  4.7e+00]
   [ 1.9e-01  6.7e-01  4.6e+00]
   [ 8.5e-02  7.1e-01  4.6e+00]
   [ 8.3e-02  8.6e-01  4.5e+00]
   [ 1.0e-01  9.6e-01  4.6e+00]
   [ 1.9e-01  1.0e+00  4.6e+00]
   [ 2.9e-01  9.6e-01  4.7e+00]
   [ 3.5e-01  8.6e-01  4.6e+00]
   [ 3.3e-01  7.6e-01  4.6e+00]
   [ 2.4e-01  7.2e-01  4.5e+00]
   [ 1.4e-01  7.6e-01  4.5e+00]
   [ 1.3e-01  8.8e-01  4.4e+00]
   [ 1.5e-01  9.9e-01  4.4e+00]
   [ 2.5e-01  1.0e+00  4.5e+00]
   [ 3.6e-01  1.0e+00  4.5e+00]
   [ 4.1e-01  9.1e-01  4.5e+00]
   [ 3.9e-01  8.0e-01  4.5e+00]
   [ 2.9e-01  7.5e-01  4.4e+00]
   [ 1.9e-01  7.8e-01  4.4e+00]
   [ 1.5e-01  9.1e-01  4.3e+00]
   [ 1.8e-01  1.0e+00  4.3e+00]
   [ 2.8e-01  1.1e+00  4.3e+00]
   [ 3.9e-01  1.0e+00  4.3e+00]
   [ 4.5e-01  9.4e-01  4.3e+00]
   [ 4.2e-01  8.4e-01  4.3e+00]
   [ 3.2e-01  7.8e-01  4.3e+00]
   [ 2.1e-01  8.1e-01  4.3e+00]
   [ 1.5e-01  9.4e-01  4.2e+00]
   [ 1.8e-01  1.1e+00  4.2e+00]
   [ 2.8e-01  1.1e+00  4.2e+00]
   [ 3.9e-01  1.1e+00  4.2e+00]
   [ 4.4e-01  9.9e-01  4.1e+00]
   [ 4.2e-01  8.8e-01  4.1e+00]
   [ 3.2e-01  8.2e-01  4.1e+00]
   [ 2.1e-01  8.5e-01  4.1e+00]
   [ 1.2e-01  9.8e-01  4.0e+00]
   [ 1.5e-01  1.1e+00  4.0e+00]
   [ 2.4e-01  1.2e+00  4.0e+00]
   [ 3.5e-01  1.1e+00  4.0e+00]
   [ 4.1e-01  1.0e+00  4.0e+00]
   [ 3.9e-01  9.2e-01  4.0e+00]
   [ 2.9e-01  8.6e-01  4.0e+00]
   [ 1.8e-01  8.8e-01  4.0e+00]
   [ 8.9e-02  9.8e-01  3.9e+00]
   [ 1.0e-01  1.1e+00  3.9e+00]
   [ 1.8e-01  1.1e+00  3.8e+00]
   [ 2.9e-01  1.1e+00  3.8e+00]
   [ 3.6e-01  1.0e+00  3.8e+00]
   [ 3.5e-01  9.2e-01  3.8e+00]
   [ 2.7e-01  8.6e-01  3.9e+00]
   [ 1.6e-01  8.9e-01  3.9e+00]
   [ 5.5e-02  9.2e-01  3.8e+00]
   [ 4.3e-02  9.9e-01  3.7e+00]
   [ 1.1e-01  1.0e+00  3.7e+00]
   [ 2.2e-01  1.0e+00  3.6e+00]
   [ 3.0e-01  9.3e-01  3.7e+00]
   [ 3.2e-01  8.7e-01  3.8e+00]
   [ 2.5e-01  8.3e-01  3.8e+00]
   [ 1.4e-01  8.5e-01  3.9e+00]
   [ 2.3e-02  8.1e-01  3.8e+00]
   [-1.1e-02  8.2e-01  3.7e+00]
   [ 3.9e-02  8.0e-01  3.6e+00]
   [ 1.4e-01  7.7e-01  3.6e+00]
   [ 2.4e-01  7.5e-01  3.6e+00]
   [ 2.8e-01  7.4e-01  3.7e+00]
   [ 2.3e-01  7.6e-01  3.8e+00]
   [ 1.2e-01  7.9e-01  3.9e+00]
   [-5.1e-03  6.9e-01  3.9e+00]
   [-4.8e-02  6.5e-01  3.8e+00]
   [-4.5e-03  6.0e-01  3.7e+00]
   [ 1.0e-01  5.7e-01  3.6e+00]
   [ 2.1e-01  5.7e-01  3.7e+00]
   [ 2.5e-01  6.1e-01  3.8e+00]
   [ 2.0e-01  6.6e-01  3.9e+00]
   [ 1.0e-01  6.9e-01  3.9e+00]
   [-2.0e-02  5.1e-01  3.9e+00]
   [-6.3e-02  4.7e-01  3.8e+00]
   [-1.9e-02  4.3e-01  3.7e+00]
   [ 8.8e-02  4.1e-01  3.7e+00]
   [ 1.9e-01  4.3e-01  3.8e+00]
   [ 2.4e-01  4.7e-01  3.8e+00]
   [ 1.9e-01  5.1e-01  3.9e+00]
   [ 8.6e-02  5.2e-01  4.0e+00]
   [-5.5e-03  2.9e-01  4.0e+00]
   [-5.0e-02  2.7e-01  3.9e+00]
   [-7.5e-03  2.7e-01  3.8e+00]
   [ 9.8e-02  2.7e-01  3.8e+00]
   [ 2.0e-01  2.9e-01  3.8e+00]
   [ 2.5e-01  3.1e-01  3.9e+00]
   [ 2.1e-01  3.1e-01  4.0e+00]
   [ 1.0e-01  3.0e-01  4.0e+00]
   [ 2.7e-02  8.7e-02  4.0e+00]
   [-2.1e-02  9.1e-02  3.9e+00]
   [ 1.7e-02  1.1e-01  3.8e+00]
   [ 1.2e-01  1.4e-01  3.7e+00]
   [ 2.2e-01  1.6e-01  3.8e+00]
   [ 2.7e-01  1.6e-01  3.9e+00]
   [ 2.3e-01  1.3e-01  4.0e+00]
   [ 1.3e-01  1.0e-01  4.0e+00]
   [ 7.3e-02 -8.0e-02  4.0e+00]
   [ 2.4e-02 -7.4e-02  3.9e+00]
   [ 5.8e-02 -3.6e-02  3.8e+00]
   [ 1.5e-01  1.1e-02  3.7e+00]
   [ 2.6e-01  3.9e-02  3.8e+00]
   [ 3.0e-01  3.3e-02  3.9e+00]
   [ 2.7e-01 -4.1e-03  4.0e+00]
   [ 1.8e-01 -5.1e-02  4.0e+00]
   [ 1.5e-01 -2.2e-01  3.9e+00]
   [ 1.0e-01 -2.3e-01  3.8e+00]
   [ 1.4e-01 -1.9e-01  3.7e+00]
   [ 2.2e-01 -1.3e-01  3.7e+00]
   [ 3.1e-01 -7.7e-02  3.7e+00]
   [ 3.6e-01 -6.8e-02  3.8e+00]
   [ 3.2e-01 -1.1e-01  3.9e+00]
   [ 2.4e-01 -1.7e-01  4.0e+00]
   [ 2.6e-01 -3.5e-01  3.9e+00]
   [ 2.3e-01 -3.8e-01  3.8e+00]
   [ 2.7e-01 -3.5e-01  3.7e+00]
   [ 3.4e-01 -2.7e-01  3.7e+00]
   [ 4.2e-01 -2.0e-01  3.7e+00]
   [ 4.4e-01 -1.7e-01  3.8e+00]
   [ 4.0e-01 -2.0e-01  3.9e+00]
   [ 3.3e-01 -2.8e-01  4.0e+00]
   [ 3.8e-01 -4.5e-01  3.9e+00]
   [ 3.7e-01 -4.9e-01  3.8e+00]
   [ 4.1e-01 -4.6e-01  3.7e+00]
   [ 4.8e-01 -3.7e-01  3.7e+00]
   [ 5.2e-01 -2.8e-01  3.7e+00]
   [ 5.3e-01 -2.4e-01  3.8e+00]
   [ 4.9e-01 -2.7e-01  3.9e+00]
   [ 4.3e-01 -3.6e-01  4.0e+00]
   [ 5.1e-01 -5.1e-01  4.0e+00]
   [ 5.2e-01 -5.6e-01  3.9e+00]
   [ 5.6e-01 -5.3e-01  3.8e+00]
   [ 6.0e-01 -4.3e-01  3.7e+00]
   [ 6.3e-01 -3.3e-01  3.8e+00]
   [ 6.2e-01 -2.8e-01  3.9e+00]
   [ 5.8e-01 -3.1e-01  4.0e+00]
   [ 5.3e-01 -4.1e-01  4.0e+00]
   [ 6.5e-01 -5.4e-01  4.0e+00]
   [ 6.8e-01 -5.9e-01  3.9e+00]
   [ 7.1e-01 -5.6e-01  3.8e+00]
   [ 7.4e-01 -4.6e-01  3.8e+00]
   [ 7.4e-01 -3.5e-01  3.8e+00]
   [ 7.2e-01 -3.0e-01  3.9e+00]
   [ 6.8e-01 -3.3e-01  4.0e+00]
   [ 6.5e-01 -4.3e-01  4.0e+00]
   [ 8.1e-01 -5.4e-01  4.1e+00]
   [ 8.4e-01 -6.0e-01  4.0e+00]
   [ 8.7e-01 -5.7e-01  3.9e+00]
   [ 8.9e-01 -4.6e-01  3.8e+00]
   [ 8.7e-01 -3.5e-01  3.8e+00]
   [ 8.3e-01 -3.0e-01  3.9e+00]
   [ 8.0e-01 -3.3e-01  4.0e+00]
   [ 7.9e-01 -4.3e-01  4.1e+00]
   [ 9.7e-01 -5.2e-01  4.1e+00]
   [ 1.0e+00 -5.7e-01  4.0e+00]
   [ 1.0e+00 -5.4e-01  3.9e+00]
   [ 1.0e+00 -4.4e-01  3.9e+00]
   [ 1.0e+00 -3.4e-01  3.9e+00]
   [ 9.5e-01 -2.8e-01  4.0e+00]
   [ 9.3e-01 -3.2e-01  4.1e+00]
   [ 9.3e-01 -4.1e-01  4.1e+00]
   [ 1.1e+00 -4.7e-01  4.2e+00]
   [ 1.2e+00 -5.2e-01  4.1e+00]
   [ 1.2e+00 -4.9e-01  4.0e+00]
   [ 1.2e+00 -3.9e-01  3.9e+00]
   [ 1.1e+00 -2.9e-01  3.9e+00]
   [ 1.1e+00 -2.5e-01  4.0e+00]
   [ 1.0e+00 -2.8e-01  4.1e+00]
   [ 1.0e+00 -3.7e-01  4.2e+00]
   [ 1.2e+00 -4.0e-01  4.2e+00]
   [ 1.3e+00 -4.4e-01  4.1e+00]
   [ 1.3e+00 -4.1e-01  4.0e+00]
   [ 1.3e+00 -3.2e-01  4.0e+00]
   [ 1.2e+00 -2.3e-01  4.0e+00]
   [ 1.1e+00 -1.9e-01  4.0e+00]
   [ 1.1e+00 -2.2e-01  4.1e+00]
   [ 1.1e+00 -3.1e-01  4.2e+00]
   [ 1.3e+00 -3.1e-01  4.3e+00]
   [ 1.4e+00 -3.4e-01  4.2e+00]
   [ 1.4e+00 -3.1e-01  4.1e+00]
   [ 1.4e+00 -2.2e-01  4.0e+00]
   [ 1.3e+00 -1.4e-01  4.0e+00]
   [ 1.2e+00 -1.0e-01  4.1e+00]
   [ 1.2e+00 -1.4e-01  4.2e+00]
   [ 1.2e+00 -2.3e-01  4.3e+00]
   [ 1.4e+00 -2.2e-01  4.3e+00]
   [ 1.5e+00 -2.4e-01  4.3e+00]
   [ 1.5e+00 -2.0e-01  4.2e+00]
   [ 1.5e+00 -1.2e-01  4.1e+00]
   [ 1.4e+00 -4.3e-02  4.1e+00]
   [ 1.3e+00 -2.1e-02  4.2e+00]
   [ 1.3e+00 -6.4e-02  4.3e+00]
   [ 1.3e+00 -1.5e-01  4.3e+00]
   [ 1.5e+00 -1.3e-01  4.4e+00]
   [ 1.6e+00 -1.4e-01  4.4e+00]
   [ 1.6e+00 -8.9e-02  4.3e+00]
   [ 1.6e+00 -1.1e-02  4.2e+00]
   [ 1.5e+00  5.1e-02  4.2e+00]
   [ 1.4e+00  6.0e-02  4.2e+00]
   [ 1.3e+00  1.2e-02  4.3e+00]
   [ 1.4e+00 -6.6e-02  4.4e+00]
   [ 1.5e+00 -3.2e-02  4.5e+00]
   [ 1.6e+00 -2.8e-02  4.4e+00]
   [ 1.7e+00  2.8e-02  4.4e+00]
   [ 1.6e+00  1.0e-01  4.3e+00]
   [ 1.5e+00  1.5e-01  4.3e+00]
   [ 1.4e+00  1.5e-01  4.3e+00]
   [ 1.4e+00  9.4e-02  4.4e+00]
   [ 1.4e+00  1.9e-02  4.5e+00]
   [ 1.5e+00  7.5e-02  4.6e+00]
   [ 1.6e+00  9.0e-02  4.5e+00]
   [ 1.7e+00  1.5e-01  4.5e+00]
   [ 1.7e+00  2.3e-01  4.4e+00]
   [ 1.5e+00  2.7e-01  4.4e+00]
   [ 1.4e+00  2.5e-01  4.4e+00]
   [ 1.4e+00  1.9e-01  4.5e+00]
   [ 1.4e+00  1.2e-01  4.6e+00]
   [ 1.5e+00  1.9e-01  4.7e+00]
   [ 1.6e+00  2.1e-01  4.7e+00]
   [ 1.7e+00  2.8e-01  4.6e+00]
   [ 1.7e+00  3.5e-01  4.5e+00]
   [ 1.6e+00  3.9e-01  4.5e+00]
   [ 1.4e+00  3.6e-01  4.5e+00]
   [ 1.4e+00  2.9e-01  4.6e+00]
   [ 1.4e+00  2.2e-01  4.6e+00]
   [ 1.5e+00  2.8e-01  4.8e+00]
   [ 1.6e+00  3.2e-01  4.7e+00]
   [ 1.7e+00  4.0e-01  4.7e+00]
   [ 1.6e+00  4.7e-01  4.6e+00]
   [ 1.5e+00  4.9e-01  4.6e+00]
   [ 1.4e+00  4.5e-01  4.6e+00]
   [ 1.4e+00  3.7e-01  4.6e+00]
   [ 1.4e+00  3.0e-01  4.7e+00]
   [ 1.5e+00  3.6e-01  4.8e+00]
   [ 1.6e+00  4.1e-01  4.8e+00]
   [ 1.6e+00  5.0e-01  4.8e+00]
   [ 1.6e+00  5.7e-01  4.7e+00]
   [ 1.5e+00  5.9e-01  4.7e+00]
   [ 1.4e+00  5.4e-01  4.7e+00]
   [ 1.4e+00  4.5e-01  4.7e+00]
   [ 1.4e+00  3.8e-01  4.8e+00]
   [ 1.5e+00  4.4e-01  5.0e+00]
   [ 1.6e+00  5.0e-01  5.0e+00]
   [ 1.6e+00  5.9e-01  4.9e+00]
   [ 1.6e+00  6.7e-01  4.8e+00]
   [ 1.5e+00  6.9e-01  4.8e+00]
   [ 1.4e+00  6.3e-01  4.8e+00]
   [ 1.3e+00  5.4e-01  4.8e+00]
   [ 1.4e+00  4.6e-01  4.9e+00]
   [ 1.4e+00  5.1e-01  5.1e+00]
   [ 1.5e+00  5.7e-01  5.1e+00]
   [ 1.5e+00  6.7e-01  5.0e+00]
   [ 1.5e+00  7.5e-01  5.0e+00]
   [ 1.4e+00  7.7e-01  4.9e+00]
   [ 1.3e+00  7.1e-01  4.9e+00]
   [ 1.3e+00  6.1e-01  4.9e+00]
   [ 1.3e+00  5.3e-01  5.0e+00]
   [ 1.4e+00  5.6e-01  5.2e+00]
   [ 1.5e+00  6.3e-01  5.2e+00]
   [ 1.5e+00  7.4e-01  5.2e+00]
   [ 1.4e+00  8.2e-01  5.1e+00]
   [ 1.3e+00  8.3e-01  5.0e+00]
   [ 1.3e+00  7.7e-01  5.0e+00]
   [ 1.2e+00  6.6e-01  5.0e+00]
   [ 1.3e+00  5.8e-01  5.1e+00]
   [ 1.3e+00  6.0e-01  5.3e+00]
   [ 1.4e+00  6.7e-01  5.3e+00]
   [ 1.4e+00  7.8e-01  5.3e+00]
   [ 1.4e+00  8.7e-01  5.2e+00]
   [ 1.3e+00  8.8e-01  5.2e+00]
   [ 1.2e+00  8.1e-01  5.1e+00]
   [ 1.2e+00  7.0e-01  5.1e+00]
   [ 1.2e+00  6.1e-01  5.2e+00]
   [ 1.2e+00  6.2e-01  5.4e+00]
   [ 1.3e+00  6.9e-01  5.4e+00]
   [ 1.3e+00  8.0e-01  5.4e+00]
   [ 1.3e+00  8.9e-01  5.4e+00]
   [ 1.2e+00  9.0e-01  5.3e+00]
   [ 1.1e+00  8.3e-01  5.3e+00]
   [ 1.1e+00  7.2e-01  5.3e+00]
   [ 1.1e+00  6.3e-01  5.3e+00]
   [ 1.1e+00  6.2e-01  5.5e+00]
   [ 1.2e+00  7.0e-01  5.5e+00]
   [ 1.2e+00  8.1e-01  5.6e+00]
   [ 1.2e+00  9.0e-01  5.5e+00]
   [ 1.1e+00  9.1e-01  5.4e+00]
   [ 1.0e+00  8.4e-01  5.4e+00]
   [ 1.0e+00  7.2e-01  5.4e+00]
   [ 1.1e+00  6.3e-01  5.4e+00]
   [ 1.1e+00  6.1e-01  5.6e+00]
   [ 1.1e+00  6.8e-01  5.6e+00]
   [ 1.1e+00  7.9e-01  5.7e+00]
   [ 1.1e+00  8.8e-01  5.6e+00]
   [ 9.7e-01  8.9e-01  5.6e+00]
   [ 9.1e-01  8.2e-01  5.5e+00]
   [ 9.2e-01  7.1e-01  5.5e+00]
   [ 9.9e-01  6.2e-01  5.5e+00]
   [ 1.0e+00  5.8e-01  5.7e+00]
   [ 1.1e+00  6.5e-01  5.7e+00]
   [ 1.0e+00  7.5e-01  5.8e+00]
   [ 9.6e-01  8.4e-01  5.7e+00]
   [ 8.7e-01  8.5e-01  5.7e+00]
   [ 8.2e-01  7.8e-01  5.6e+00]
   [ 8.4e-01  6.7e-01  5.6e+00]
   [ 9.1e-01  5.9e-01  5.6e+00]
   [ 9.2e-01  5.2e-01  5.7e+00]
   [ 9.7e-01  5.9e-01  5.8e+00]
   [ 9.4e-01  6.9e-01  5.9e+00]
   [ 8.6e-01  7.7e-01  5.9e+00]
   [ 7.7e-01  7.8e-01  5.8e+00]
   [ 7.2e-01  7.1e-01  5.7e+00]
   [ 7.5e-01  6.1e-01  5.7e+00]
   [ 8.3e-01  5.3e-01  5.7e+00]
   [ 8.5e-01  4.6e-01  5.8e+00]
   [ 8.9e-01  5.2e-01  5.9e+00]
   [ 8.6e-01  6.1e-01  6.0e+00]
   [ 7.7e-01  6.8e-01  6.0e+00]
   [ 6.8e-01  6.9e-01  5.9e+00]
   [ 6.3e-01  6.3e-01  5.8e+00]
   [ 6.7e-01  5.4e-01  5.8e+00]
   [ 7.6e-01  4.6e-01  5.8e+00]
   [ 7.9e-01  3.9e-01  5.9e+00]
   [ 8.3e-01  4.4e-01  6.0e+00]
   [ 7.9e-01  5.2e-01  6.1e+00]
   [ 6.9e-01  5.9e-01  6.1e+00]
   [ 6.0e-01  5.9e-01  6.0e+00]
   [ 5.6e-01  5.4e-01  5.9e+00]
   [ 6.0e-01  4.5e-01  5.8e+00]
   [ 7.0e-01  3.9e-01  5.8e+00]
   [ 7.5e-01  3.0e-01  6.0e+00]
   [ 7.9e-01  3.5e-01  6.1e+00]
   [ 7.4e-01  4.2e-01  6.1e+00]
   [ 6.4e-01  4.7e-01  6.2e+00]
   [ 5.4e-01  4.7e-01  6.1e+00]
   [ 5.0e-01  4.2e-01  6.0e+00]
   [ 5.5e-01  3.5e-01  5.9e+00]
   [ 6.5e-01  3.0e-01  5.9e+00]
   [ 7.2e-01  1.9e-01  6.0e+00]
   [ 7.5e-01  2.4e-01  6.1e+00]
   [ 7.0e-01  3.0e-01  6.2e+00]
   [ 6.0e-01  3.4e-01  6.2e+00]
   [ 4.9e-01  3.3e-01  6.2e+00]
   [ 4.6e-01  2.8e-01  6.1e+00]
   [ 5.1e-01  2.2e-01  6.0e+00]
   [ 6.2e-01  1.8e-01  6.0e+00]
   [ 7.0e-01  5.3e-02  6.1e+00]
   [ 7.4e-01  1.0e-01  6.2e+00]
   [ 6.8e-01  1.5e-01  6.3e+00]
   [ 5.7e-01  1.7e-01  6.3e+00]
   [ 4.7e-01  1.5e-01  6.3e+00]
   [ 4.4e-01  1.1e-01  6.2e+00]
   [ 4.9e-01  5.6e-02  6.1e+00]
   [ 6.0e-01  3.4e-02  6.1e+00]
   [ 7.0e-01 -1.2e-01  6.2e+00]
   [ 7.3e-01 -7.2e-02  6.3e+00]
   [ 6.8e-01 -3.0e-02  6.4e+00]
   [ 5.7e-01 -1.8e-02  6.4e+00]
   [ 4.7e-01 -4.1e-02  6.4e+00]
   [ 4.3e-01 -8.6e-02  6.3e+00]
   [ 4.9e-01 -1.3e-01  6.2e+00]
   [ 6.0e-01 -1.4e-01  6.2e+00]
   [ 7.1e-01 -3.0e-01  6.3e+00]
   [ 7.4e-01 -2.5e-01  6.4e+00]
   [ 6.9e-01 -2.1e-01  6.5e+00]
   [ 5.8e-01 -2.1e-01  6.5e+00]
   [ 4.8e-01 -2.3e-01  6.5e+00]
   [ 4.4e-01 -2.8e-01  6.4e+00]
   [ 5.0e-01 -3.1e-01  6.3e+00]
   [ 6.0e-01 -3.2e-01  6.2e+00]
   [ 7.2e-01 -4.6e-01  6.3e+00]
   [ 7.5e-01 -4.2e-01  6.4e+00]
   [ 7.0e-01 -3.8e-01  6.5e+00]
   [ 5.9e-01 -3.8e-01  6.6e+00]
   [ 4.9e-01 -4.0e-01  6.5e+00]
   [ 4.6e-01 -4.5e-01  6.4e+00]
   [ 5.1e-01 -4.8e-01  6.3e+00]
   [ 6.2e-01 -4.9e-01  6.3e+00]
   [ 9.2e-01 -3.0e-01  5.4e+00]
   [ 6.7e-01 -4.5e-01  5.6e+00]
   [ 7.5e-01 -4.9e-01  5.7e+00]
   [ 1.0e+00 -3.3e-01  5.5e+00]
   [ 9.7e-01 -8.8e-01  5.1e+00]
   [ 7.2e-01 -1.0e+00  5.3e+00]
   [ 8.0e-01 -1.1e+00  5.3e+00]
   [ 1.0e+00 -9.2e-01  5.1e+00]
   [ 8.1e-01 -2.1e-01  5.1e+00]
   [ 6.3e-01 -1.2e-01  5.4e+00]
   [ 7.0e-01 -1.8e-01  5.5e+00]
   [ 8.8e-01 -2.7e-01  5.2e+00]
   [ 4.1e-01 -7.8e-01  5.1e+00]
   [ 2.3e-01 -7.0e-01  5.4e+00]
   [ 3.1e-01 -7.5e-01  5.4e+00]
   [ 4.8e-01 -8.4e-01  5.1e+00]
   [ 6.2e-01  8.1e-02  5.1e+00]
   [ 4.5e-01  3.0e-01  5.3e+00]
   [ 5.0e-01  2.4e-01  5.4e+00]
   [ 6.7e-01  2.9e-02  5.1e+00]
   [ 9.2e-02 -3.7e-01  5.1e+00]
   [-7.9e-02 -1.6e-01  5.3e+00]
   [-3.0e-02 -2.1e-01  5.4e+00]
   [ 1.4e-01 -4.2e-01  5.2e+00]
   [ 5.9e-01  2.6e-01  4.8e+00]
   [ 5.8e-01  5.7e-01  4.9e+00]
   [ 6.2e-01  5.3e-01  5.0e+00]
   [ 6.3e-01  2.1e-01  4.9e+00]
   [-6.4e-02  1.3e-01  5.0e+00]
   [-7.6e-02  4.5e-01  5.2e+00]
   [-3.7e-02  4.1e-01  5.2e+00]
   [-2.5e-02  8.6e-02  5.1e+00]
   [ 5.9e-01  2.9e-01  4.5e+00]
   [ 7.7e-01  5.9e-01  4.6e+00]
   [ 7.9e-01  5.6e-01  4.7e+00]
   [ 6.1e-01  2.6e-01  4.6e+00]
   [-3.4e-03  5.9e-01  4.7e+00]
   [ 1.7e-01  8.9e-01  4.8e+00]
   [ 1.9e-01  8.6e-01  4.9e+00]
   [ 1.6e-02  5.6e-01  4.8e+00]
   [ 4.3e-01  2.2e-01  4.4e+00]
   [ 7.5e-01  3.6e-01  4.4e+00]
   [ 7.5e-01  3.8e-01  4.5e+00]
   [ 4.3e-01  2.4e-01  4.5e+00]
   [ 1.4e-01  8.4e-01  4.3e+00]
   [ 4.6e-01  9.9e-01  4.2e+00]
   [ 4.6e-01  1.0e+00  4.4e+00]
   [ 1.4e-01  8.6e-01  4.4e+00]
   [ 6.2e-01  1.1e+00  3.2e+00]
   [ 2.9e-01  1.2e+00  3.1e+00]
   [ 2.9e-01  1.3e+00  3.1e+00]
   [ 6.1e-01  1.2e+00  3.2e+00]
   [ 3.4e-01  8.6e-01  3.8e+00]
   [ 1.9e-02  8.9e-01  3.7e+00]
   [ 1.4e-02  1.0e+00  3.7e+00]
   [ 3.4e-01  9.6e-01  3.8e+00]
   [-4.8e-01  7.1e-01  3.8e+00]
   [-6.2e-01  3.9e-01  3.9e+00]
   [-6.1e-01  4.2e-01  4.0e+00]
   [-4.7e-01  7.3e-01  3.9e+00]
   [ 1.6e-01  4.3e-01  3.8e+00]
   [ 2.6e-02  1.2e-01  3.9e+00]
   [ 3.5e-02  1.5e-01  4.0e+00]
   [ 1.7e-01  4.6e-01  3.9e+00]
   [ 8.6e-01  2.1e-01  3.7e+00]
   [ 1.0e+00 -9.7e-02  3.6e+00]
   [ 9.5e-01 -7.9e-02  3.5e+00]
   [ 8.1e-01  2.3e-01  3.6e+00]
   [ 2.9e-01 -1.3e-01  3.9e+00]
   [ 4.3e-01 -4.4e-01  3.8e+00]
   [ 3.8e-01 -4.2e-01  3.7e+00]
   [ 2.4e-01 -1.1e-01  3.8e+00]
   [ 8.9e-01  2.7e-01  4.0e+00]
   [ 1.2e+00  1.8e-01  3.8e+00]
   [ 1.1e+00  1.9e-01  3.7e+00]
   [ 8.3e-01  2.8e-01  3.9e+00]
   [ 7.2e-01 -4.1e-01  4.1e+00]
   [ 1.0e+00 -5.0e-01  3.9e+00]
   [ 9.5e-01 -4.9e-01  3.8e+00]
   [ 6.6e-01 -4.0e-01  4.0e+00]
   [ 8.9e-01  3.3e-01  4.4e+00]
   [ 1.2e+00  4.8e-01  4.2e+00]
   [ 1.1e+00  4.7e-01  4.1e+00]
   [ 8.5e-01  3.1e-01  4.3e+00]
   [ 1.2e+00 -3.0e-01  4.3e+00]
   [ 1.5e+00 -1.4e-01  4.1e+00]
   [ 1.4e+00 -1.5e-01  4.0e+00]
   [ 1.2e+00 -3.1e-01  4.2e+00]
   [ 8.6e-01  1.9e-01  4.7e+00]
   [ 9.4e-01  5.3e-01  4.7e+00]
   [ 9.2e-01  5.3e-01  4.6e+00]
   [ 8.3e-01  1.9e-01  4.6e+00]
   [ 1.5e+00  5.1e-03  4.5e+00]
   [ 1.6e+00  3.5e-01  4.5e+00]
   [ 1.6e+00  3.4e-01  4.4e+00]
   [ 1.5e+00  5.8e-05  4.4e+00]
   [ 9.7e-01  3.9e-02  5.0e+00]
   [ 7.9e-01  3.4e-01  5.0e+00]
   [ 7.7e-01  3.4e-01  4.9e+00]
   [ 9.5e-01  4.5e-02  4.9e+00]
   [ 1.6e+00  4.1e-01  4.9e+00]
   [ 1.4e+00  7.1e-01  4.9e+00]
   [ 1.4e+00  7.2e-01  4.8e+00]
   [ 1.5e+00  4.2e-01  4.8e+00]
   [ 1.0e+00  6.9e-02  5.3e+00]
   [ 7.0e-01  2.4e-01  5.3e+00]
   [ 7.0e-01  2.6e-01  5.2e+00]
   [ 1.0e+00  9.3e-02  5.1e+00]
   [ 1.4e+00  6.6e-01  5.4e+00]
   [ 1.1e+00  8.3e-01  5.4e+00]
   [ 1.0e+00  8.6e-01  5.3e+00]
   [ 1.4e+00  6.9e-01  5.3e+00]
   [ 1.1e+00  4.7e-03  5.5e+00]
   [ 7.2e-01 -3.4e-02  5.6e+00]
   [ 7.0e-01  7.9e-03  5.5e+00]
   [ 1.0e+00  4.7e-02  5.4e+00]
   [ 1.0e+00  6.5e-01  5.8e+00]
   [ 6.8e-01  6.1e-01  5.8e+00]
   [ 6.6e-01  6.5e-01  5.7e+00]
   [ 1.0e+00  6.9e-01  5.7e+00]
   [ 9.8e-01 -2.4e-01  5.7e+00]
   [ 6.7e-01 -3.9e-01  5.8e+00]
   [ 6.2e-01 -3.4e-01  5.7e+00]
   [ 9.3e-01 -1.9e-01  5.7e+00]
   [ 7.8e-01  3.1e-01  6.1e+00]
   [ 4.7e-01  1.6e-01  6.2e+00]
   [ 4.3e-01  2.1e-01  6.1e+00]
   [ 7.4e-01  3.6e-01  6.0e+00]
   [ 1.3e+00 -1.8e-01  6.0e+00]
   [ 1.1e+00 -4.9e-01  5.9e+00]
   [ 1.1e+00 -4.4e-01  5.8e+00]
   [ 1.2e+00 -1.3e-01  5.9e+00]
   [ 7.3e-01 -1.3e-01  6.4e+00]
   [ 6.1e-01 -4.5e-01  6.3e+00]
   [ 5.5e-01 -4.0e-01  6.2e+00]
   [ 6.7e-01 -8.2e-02  6.4e+00]]
# ---
# name: test_selection_working[chain_id-8H1B].6
  tuple(
    656,
    3,
  )
# ---
# name: test_selection_working[chain_id-8H1B].7
  [[-2.4e+00 -3.0e-01 -2.6e-02]
   [-2.4e+00 -2.7e-01  8.5e-02]
   [-2.5e+00 -2.7e-01  1.6e-01]
   [-2.6e+00 -3.0e-01  1.7e-01]
   [-2.7e+00 -3.5e-01  9.2e-02]
   [-2.7e+00 -3.8e-01 -1.9e-02]
   [-2.6e+00 -3.8e-01 -9.9e-02]
   [-2.5e+00 -3.5e-01 -1.0e-01]
   [-2.4e+00 -4.7e-01  2.3e-02]
   [-2.4e+00 -4.4e-01  1.3e-01]
   [-2.4e+00 -4.4e-01  2.1e-01]
   [-2.5e+00 -4.7e-01  2.2e-01]
   [-2.6e+00 -5.2e-01  1.4e-01]
   [-2.6e+00 -5.5e-01  3.1e-02]
   [-2.5e+00 -5.5e-01 -5.0e-02]
   [-2.4e+00 -5.1e-01 -5.3e-02]
   [-2.3e+00 -6.5e-01  7.3e-02]
   [-2.3e+00 -6.2e-01  1.8e-01]
   [-2.4e+00 -6.3e-01  2.7e-01]
   [-2.5e+00 -6.6e-01  2.7e-01]
   [-2.6e+00 -7.1e-01  1.9e-01]
   [-2.6e+00 -7.4e-01  8.3e-02]
   [-2.5e+00 -7.3e-01  1.5e-03]
   [-2.4e+00 -6.9e-01 -2.9e-03]
   [-2.2e+00 -8.2e-01  1.1e-01]
   [-2.2e+00 -7.9e-01  2.3e-01]
   [-2.3e+00 -8.1e-01  3.1e-01]
   [-2.4e+00 -8.6e-01  3.2e-01]
   [-2.5e+00 -9.0e-01  2.4e-01]
   [-2.5e+00 -9.3e-01  1.3e-01]
   [-2.4e+00 -9.1e-01  4.5e-02]
   [-2.3e+00 -8.6e-01  3.9e-02]
   [-2.2e+00 -9.6e-01  1.4e-01]
   [-2.2e+00 -9.4e-01  2.5e-01]
   [-2.2e+00 -9.7e-01  3.4e-01]
   [-2.3e+00 -1.0e+00  3.5e-01]
   [-2.4e+00 -1.1e+00  2.7e-01]
   [-2.4e+00 -1.1e+00  1.6e-01]
   [-2.3e+00 -1.1e+00  7.2e-02]
   [-2.2e+00 -1.0e+00  6.3e-02]
   [-2.1e+00 -1.1e+00  1.4e-01]
   [-2.1e+00 -1.1e+00  2.6e-01]
   [-2.1e+00 -1.1e+00  3.5e-01]
   [-2.2e+00 -1.2e+00  3.5e-01]
   [-2.3e+00 -1.2e+00  2.8e-01]
   [-2.3e+00 -1.2e+00  1.7e-01]
   [-2.2e+00 -1.2e+00  7.8e-02]
   [-2.2e+00 -1.1e+00  6.9e-02]
   [-2.0e+00 -1.1e+00  1.4e-01]
   [-2.0e+00 -1.1e+00  2.5e-01]
   [-2.0e+00 -1.2e+00  3.4e-01]
   [-2.1e+00 -1.3e+00  3.4e-01]
   [-2.2e+00 -1.3e+00  2.7e-01]
   [-2.2e+00 -1.3e+00  1.6e-01]
   [-2.2e+00 -1.3e+00  6.9e-02]
   [-2.1e+00 -1.2e+00  6.1e-02]
   [-1.9e+00 -1.2e+00  1.2e-01]
   [-1.9e+00 -1.2e+00  2.3e-01]
   [-1.9e+00 -1.3e+00  3.1e-01]
   [-2.0e+00 -1.4e+00  3.2e-01]
   [-2.1e+00 -1.4e+00  2.5e-01]
   [-2.1e+00 -1.4e+00  1.3e-01]
   [-2.0e+00 -1.4e+00  4.8e-02]
   [-2.0e+00 -1.3e+00  4.2e-02]
   [-1.8e+00 -1.3e+00  9.2e-02]
   [-1.8e+00 -1.3e+00  2.0e-01]
   [-1.8e+00 -1.4e+00  2.9e-01]
   [-1.9e+00 -1.5e+00  2.9e-01]
   [-1.9e+00 -1.5e+00  2.1e-01]
   [-1.9e+00 -1.5e+00  1.0e-01]
   [-1.9e+00 -1.5e+00  1.9e-02]
   [-1.9e+00 -1.4e+00  1.5e-02]
   [-1.7e+00 -1.3e+00  6.1e-02]
   [-1.7e+00 -1.4e+00  1.7e-01]
   [-1.7e+00 -1.4e+00  2.5e-01]
   [-1.7e+00 -1.5e+00  2.5e-01]
   [-1.8e+00 -1.6e+00  1.8e-01]
   [-1.8e+00 -1.6e+00  6.5e-02]
   [-1.8e+00 -1.5e+00 -1.5e-02]
   [-1.7e+00 -1.4e+00 -1.6e-02]
   [-1.6e+00 -1.4e+00  2.9e-02]
   [-1.5e+00 -1.4e+00  1.4e-01]
   [-1.5e+00 -1.5e+00  2.1e-01]
   [-1.6e+00 -1.6e+00  2.1e-01]
   [-1.6e+00 -1.7e+00  1.3e-01]
   [-1.7e+00 -1.7e+00  2.3e-02]
   [-1.7e+00 -1.6e+00 -5.3e-02]
   [-1.6e+00 -1.5e+00 -5.1e-02]
   [-1.5e+00 -1.4e+00 -6.7e-03]
   [-1.4e+00 -1.4e+00  1.0e-01]
   [-1.4e+00 -1.5e+00  1.8e-01]
   [-1.4e+00 -1.6e+00  1.7e-01]
   [-1.5e+00 -1.7e+00  8.6e-02]
   [-1.5e+00 -1.7e+00 -2.4e-02]
   [-1.5e+00 -1.6e+00 -9.6e-02]
   [-1.5e+00 -1.5e+00 -8.9e-02]
   [-1.3e+00 -1.4e+00 -4.6e-02]
   [-1.3e+00 -1.4e+00  6.4e-02]
   [-1.3e+00 -1.5e+00  1.3e-01]
   [-1.3e+00 -1.6e+00  1.2e-01]
   [-1.3e+00 -1.7e+00  3.8e-02]
   [-1.3e+00 -1.7e+00 -7.2e-02]
   [-1.4e+00 -1.6e+00 -1.4e-01]
   [-1.4e+00 -1.5e+00 -1.3e-01]
   [-1.2e+00 -1.4e+00 -8.6e-02]
   [-1.2e+00 -1.4e+00  2.3e-02]
   [-1.1e+00 -1.5e+00  8.9e-02]
   [-1.1e+00 -1.6e+00  7.5e-02]
   [-1.1e+00 -1.7e+00 -1.2e-02]
   [-1.2e+00 -1.7e+00 -1.2e-01]
   [-1.2e+00 -1.6e+00 -1.9e-01]
   [-1.2e+00 -1.5e+00 -1.7e-01]
   [-1.1e+00 -1.4e+00 -1.2e-01]
   [-1.1e+00 -1.4e+00 -1.4e-02]
   [-1.0e+00 -1.5e+00  5.0e-02]
   [-9.9e-01 -1.6e+00  3.1e-02]
   [-1.0e+00 -1.7e+00 -5.9e-02]
   [-1.0e+00 -1.7e+00 -1.7e-01]
   [-1.1e+00 -1.6e+00 -2.3e-01]
   [-1.1e+00 -1.5e+00 -2.1e-01]
   [-9.7e-01 -1.4e+00 -1.5e-01]
   [-9.4e-01 -1.4e+00 -4.2e-02]
   [-9.0e-01 -1.5e+00  2.1e-02]
   [-8.7e-01 -1.6e+00 -1.8e-03]
   [-8.6e-01 -1.6e+00 -9.6e-02]
   [-8.9e-01 -1.6e+00 -2.1e-01]
   [-9.3e-01 -1.5e+00 -2.7e-01]
   [-9.7e-01 -1.4e+00 -2.5e-01]
   [-8.4e-01 -1.3e+00 -1.7e-01]
   [-8.2e-01 -1.3e+00 -5.7e-02]
   [-7.8e-01 -1.4e+00  4.6e-03]
   [-7.3e-01 -1.5e+00 -2.0e-02]
   [-7.1e-01 -1.6e+00 -1.2e-01]
   [-7.3e-01 -1.6e+00 -2.3e-01]
   [-7.7e-01 -1.5e+00 -2.9e-01]
   [-8.2e-01 -1.4e+00 -2.7e-01]
   [-7.3e-01 -1.2e+00 -1.8e-01]
   [-7.1e-01 -1.3e+00 -6.4e-02]
   [-6.6e-01 -1.3e+00 -2.9e-03]
   [-5.9e-01 -1.4e+00 -2.8e-02]
   [-5.6e-01 -1.5e+00 -1.3e-01]
   [-5.7e-01 -1.5e+00 -2.4e-01]
   [-6.3e-01 -1.4e+00 -3.0e-01]
   [-7.0e-01 -1.3e+00 -2.7e-01]
   [-6.3e-01 -1.2e+00 -1.7e-01]
   [-6.2e-01 -1.2e+00 -6.3e-02]
   [-5.6e-01 -1.3e+00 -2.0e-03]
   [-4.9e-01 -1.3e+00 -2.7e-02]
   [-4.4e-01 -1.4e+00 -1.2e-01]
   [-4.5e-01 -1.4e+00 -2.3e-01]
   [-5.1e-01 -1.3e+00 -3.0e-01]
   [-5.8e-01 -1.2e+00 -2.7e-01]
   [-5.3e-01 -1.1e+00 -1.5e-01]
   [-5.3e-01 -1.1e+00 -4.1e-02]
   [-4.9e-01 -1.2e+00  1.7e-02]
   [-4.1e-01 -1.3e+00 -7.1e-03]
   [-3.5e-01 -1.3e+00 -1.0e-01]
   [-3.4e-01 -1.3e+00 -2.1e-01]
   [-3.9e-01 -1.2e+00 -2.7e-01]
   [-4.6e-01 -1.1e+00 -2.4e-01]
   [-4.0e-01 -9.7e-01 -7.8e-02]
   [-4.3e-01 -1.0e+00  1.9e-02]
   [-4.0e-01 -1.1e+00  6.8e-02]
   [-3.2e-01 -1.2e+00  4.1e-02]
   [-2.5e-01 -1.2e+00 -4.8e-02]
   [-2.3e-01 -1.2e+00 -1.5e-01]
   [-2.6e-01 -1.1e+00 -1.9e-01]
   [-3.3e-01 -9.9e-01 -1.7e-01]
   [-2.5e-01 -9.0e-01  2.3e-02]
   [-3.0e-01 -9.6e-01  1.1e-01]
   [-2.8e-01 -1.1e+00  1.5e-01]
   [-2.2e-01 -1.2e+00  1.1e-01]
   [-1.5e-01 -1.2e+00  2.6e-02]
   [-1.0e-01 -1.1e+00 -6.0e-02]
   [-1.2e-01 -1.0e+00 -9.7e-02]
   [-1.8e-01 -9.2e-01 -6.2e-02]
   [-1.3e-01 -8.6e-01  1.3e-01]
   [-1.9e-01 -9.3e-01  2.0e-01]
   [-1.9e-01 -1.0e+00  2.2e-01]
   [-1.3e-01 -1.1e+00  1.9e-01]
   [-3.7e-02 -1.1e+00  1.2e-01]
   [ 2.3e-02 -1.1e+00  5.2e-02]
   [ 2.0e-02 -9.7e-01  2.4e-02]
   [-4.4e-02 -8.8e-01  5.6e-02]
   [-6.9e-02 -8.4e-01  2.3e-01]
   [-1.5e-01 -9.2e-01  2.7e-01]
   [-1.4e-01 -1.0e+00  2.9e-01]
   [-6.4e-02 -1.1e+00  2.9e-01]
   [ 4.6e-02 -1.1e+00  2.6e-01]
   [ 1.2e-01 -1.0e+00  2.2e-01]
   [ 1.2e-01 -9.3e-01  1.9e-01]
   [ 4.1e-02 -8.5e-01  2.0e-01]
   [-7.0e-02 -8.2e-01  3.3e-01]
   [-1.5e-01 -9.0e-01  3.2e-01]
   [-1.4e-01 -1.0e+00  3.5e-01]
   [-6.5e-02 -1.1e+00  3.9e-01]
   [ 4.3e-02 -1.1e+00  4.3e-01]
   [ 1.2e-01 -9.9e-01  4.4e-01]
   [ 1.2e-01 -8.8e-01  4.1e-01]
   [ 3.8e-02 -8.1e-01  3.7e-01]
   [-1.5e-01 -8.0e-01  4.3e-01]
   [-1.9e-01 -8.9e-01  3.8e-01]
   [-1.9e-01 -1.0e+00  4.0e-01]
   [-1.4e-01 -1.1e+00  4.8e-01]
   [-7.2e-02 -1.1e+00  5.7e-01]
   [-3.2e-02 -9.6e-01  6.2e-01]
   [-4.0e-02 -8.4e-01  6.1e-01]
   [-8.9e-02 -7.8e-01  5.3e-01]
   [-2.9e-01 -8.1e-01  4.7e-01]
   [-3.0e-01 -9.0e-01  4.1e-01]
   [-2.9e-01 -1.0e+00  4.2e-01]
   [-2.7e-01 -1.1e+00  5.1e-01]
   [-2.5e-01 -1.1e+00  6.3e-01]
   [-2.4e-01 -9.7e-01  6.9e-01]
   [-2.5e-01 -8.5e-01  6.7e-01]
   [-2.7e-01 -7.9e-01  5.8e-01]
   [-4.5e-01 -8.1e-01  4.9e-01]
   [-4.7e-01 -9.1e-01  4.2e-01]
   [-4.8e-01 -1.0e+00  4.4e-01]
   [-4.7e-01 -1.1e+00  5.4e-01]
   [-4.5e-01 -1.1e+00  6.5e-01]
   [-4.3e-01 -9.7e-01  7.1e-01]
   [-4.3e-01 -8.6e-01  6.9e-01]
   [-4.4e-01 -8.0e-01  6.0e-01]
   [-6.2e-01 -7.8e-01  5.2e-01]
   [-6.7e-01 -8.7e-01  4.6e-01]
   [-7.0e-01 -9.8e-01  4.9e-01]
   [-6.9e-01 -1.0e+00  5.9e-01]
   [-6.5e-01 -1.0e+00  6.9e-01]
   [-6.0e-01 -9.4e-01  7.5e-01]
   [-5.7e-01 -8.3e-01  7.2e-01]
   [-5.8e-01 -7.7e-01  6.3e-01]
   [-7.4e-01 -7.2e-01  5.8e-01]
   [-8.2e-01 -7.9e-01  5.4e-01]
   [-8.6e-01 -8.9e-01  5.7e-01]
   [-8.5e-01 -9.6e-01  6.7e-01]
   [-8.0e-01 -9.5e-01  7.6e-01]
   [-7.2e-01 -8.7e-01  8.1e-01]
   [-6.7e-01 -7.7e-01  7.8e-01]
   [-6.8e-01 -7.1e-01  6.8e-01]
   [-8.3e-01 -6.4e-01  6.4e-01]
   [-9.2e-01 -7.1e-01  6.0e-01]
   [-9.8e-01 -8.0e-01  6.4e-01]
   [-9.8e-01 -8.6e-01  7.4e-01]
   [-9.2e-01 -8.5e-01  8.4e-01]
   [-8.3e-01 -7.8e-01  8.8e-01]
   [-7.7e-01 -6.9e-01  8.4e-01]
   [-7.7e-01 -6.4e-01  7.4e-01]
   [-9.1e-01 -5.6e-01  6.8e-01]
   [-9.9e-01 -6.3e-01  6.4e-01]
   [-1.1e+00 -7.0e-01  6.9e-01]
   [-1.1e+00 -7.4e-01  7.9e-01]
   [-1.0e+00 -7.2e-01  9.0e-01]
   [-9.5e-01 -6.6e-01  9.4e-01]
   [-8.8e-01 -5.8e-01  8.9e-01]
   [-8.6e-01 -5.4e-01  7.8e-01]
   [-9.9e-01 -4.6e-01  6.8e-01]
   [-1.1e+00 -5.3e-01  6.4e-01]
   [-1.2e+00 -5.9e-01  6.9e-01]
   [-1.2e+00 -6.0e-01  8.0e-01]
   [-1.2e+00 -5.7e-01  9.0e-01]
   [-1.1e+00 -5.0e-01  9.4e-01]
   [-9.9e-01 -4.4e-01  8.9e-01]
   [-9.6e-01 -4.2e-01  7.9e-01]
   [-1.1e+00 -3.7e-01  6.6e-01]
   [-1.1e+00 -4.4e-01  6.2e-01]
   [-1.2e+00 -4.9e-01  6.6e-01]
   [-1.3e+00 -4.8e-01  7.6e-01]
   [-1.3e+00 -4.2e-01  8.6e-01]
   [-1.2e+00 -3.5e-01  9.0e-01]
   [-1.1e+00 -3.1e-01  8.6e-01]
   [-1.0e+00 -3.2e-01  7.5e-01]
   [-1.1e+00 -3.0e-01  6.1e-01]
   [-1.2e+00 -3.7e-01  5.7e-01]
   [-1.3e+00 -4.0e-01  6.1e-01]
   [-1.4e+00 -3.7e-01  7.0e-01]
   [-1.3e+00 -3.0e-01  7.9e-01]
   [-1.3e+00 -2.2e-01  8.2e-01]
   [-1.2e+00 -2.0e-01  7.9e-01]
   [-1.1e+00 -2.3e-01  7.0e-01]
   [-1.1e+00 -2.2e-01  5.5e-01]
   [-1.2e+00 -2.9e-01  5.0e-01]
   [-1.3e+00 -3.0e-01  5.3e-01]
   [-1.4e+00 -2.6e-01  6.0e-01]
   [-1.4e+00 -1.8e-01  6.8e-01]
   [-1.3e+00 -1.1e-01  7.2e-01]
   [-1.2e+00 -9.4e-02  7.0e-01]
   [-1.1e+00 -1.4e-01  6.3e-01]
   [-1.2e+00 -1.4e-01  4.5e-01]
   [-1.2e+00 -2.0e-01  4.1e-01]
   [-1.3e+00 -2.1e-01  4.2e-01]
   [-1.4e+00 -1.5e-01  4.8e-01]
   [-1.4e+00 -6.1e-02  5.6e-01]
   [-1.3e+00  3.2e-03  6.0e-01]
   [-1.2e+00  7.7e-03  5.9e-01]
   [-1.1e+00 -5.0e-02  5.3e-01]
   [-1.2e+00 -5.6e-02  3.6e-01]
   [-1.2e+00 -1.2e-01  3.1e-01]
   [-1.4e+00 -1.1e-01  3.1e-01]
   [-1.4e+00 -4.0e-02  3.5e-01]
   [-1.4e+00  5.2e-02  4.2e-01]
   [-1.3e+00  1.1e-01  4.7e-01]
   [-1.2e+00  1.0e-01  4.7e-01]
   [-1.2e+00  3.5e-02  4.3e-01]
   [-1.1e+00  3.9e-03  2.7e-01]
   [-1.2e+00 -5.5e-02  2.2e-01]
   [-1.3e+00 -3.8e-02  2.0e-01]
   [-1.4e+00  4.3e-02  2.3e-01]
   [-1.4e+00  1.4e-01  2.9e-01]
   [-1.3e+00  2.0e-01  3.4e-01]
   [-1.2e+00  1.8e-01  3.6e-01]
   [-1.1e+00  1.0e-01  3.3e-01]
   [-1.1e+00  5.1e-02  1.7e-01]
   [-1.2e+00 -1.0e-02  1.2e-01]
   [-1.3e+00  9.2e-03  9.8e-02]
   [-1.4e+00  9.9e-02  1.1e-01]
   [-1.4e+00  2.1e-01  1.5e-01]
   [-1.3e+00  2.7e-01  2.0e-01]
   [-1.2e+00  2.5e-01  2.2e-01]
   [-1.1e+00  1.6e-01  2.1e-01]
   [-1.1e+00  8.4e-02  3.7e-02]
   [-1.2e+00  2.0e-02  1.1e-03]
   [-1.3e+00  4.1e-02 -2.5e-02]
   [-1.3e+00  1.3e-01 -2.7e-02]
   [-1.3e+00  2.4e-01 -2.8e-03]
   [-1.2e+00  3.1e-01  3.3e-02]
   [-1.1e+00  2.9e-01  5.9e-02]
   [-1.1e+00  2.0e-01  6.1e-02]
   [-1.0e+00  9.8e-02 -9.0e-02]
   [-1.1e+00  3.3e-02 -1.2e-01]
   [-1.2e+00  5.4e-02 -1.5e-01]
   [-1.3e+00  1.5e-01 -1.7e-01]
   [-1.3e+00  2.6e-01 -1.6e-01]
   [-1.2e+00  3.3e-01 -1.3e-01]
   [-1.1e+00  3.1e-01 -9.9e-02]
   [-1.0e+00  2.1e-01 -8.2e-02]
   [-1.0e+00  9.1e-02 -2.0e-01]
   [-1.1e+00  2.7e-02 -2.2e-01]
   [-1.2e+00  4.7e-02 -2.6e-01]
   [-1.3e+00  1.4e-01 -2.9e-01]
   [-1.2e+00  2.5e-01 -3.0e-01]
   [-1.1e+00  3.2e-01 -2.8e-01]
   [-1.0e+00  3.0e-01 -2.4e-01]
   [-9.8e-01  2.0e-01 -2.1e-01]
   [-9.7e-01  6.1e-02 -3.1e-01]
   [-1.1e+00 -4.8e-04 -3.2e-01]
   [-1.2e+00  2.0e-02 -3.6e-01]
   [-1.2e+00  1.1e-01 -4.1e-01]
   [-1.2e+00  2.2e-01 -4.4e-01]
   [-1.1e+00  2.8e-01 -4.3e-01]
   [-9.9e-01  2.6e-01 -3.9e-01]
   [-9.4e-01  1.7e-01 -3.4e-01]
   [-9.3e-01  4.3e-03 -4.3e-01]
   [-1.0e+00 -5.2e-02 -4.3e-01]
   [-1.1e+00 -3.2e-02 -4.7e-01]
   [-1.2e+00  5.3e-02 -5.3e-01]
   [-1.2e+00  1.5e-01 -5.7e-01]
   [-1.1e+00  2.1e-01 -5.8e-01]
   [-9.5e-01  1.9e-01 -5.4e-01]
   [-9.0e-01  1.0e-01 -4.8e-01]
   [-9.0e-01 -6.8e-02 -5.5e-01]
   [-1.0e+00 -1.2e-01 -5.3e-01]
   [-1.1e+00 -9.9e-02 -5.8e-01]
   [-1.2e+00 -2.2e-02 -6.5e-01]
   [-1.1e+00  6.8e-02 -7.1e-01]
   [-1.0e+00  1.2e-01 -7.2e-01]
   [-9.1e-01  9.9e-02 -6.8e-01]
   [-8.7e-01  2.2e-02 -6.1e-01]
   [-8.8e-01 -1.5e-01 -6.3e-01]
   [-9.9e-01 -1.9e-01 -6.1e-01]
   [-1.1e+00 -1.7e-01 -6.5e-01]
   [-1.1e+00 -1.1e-01 -7.4e-01]
   [-1.1e+00 -2.9e-02 -8.1e-01]
   [-9.9e-01  1.2e-02 -8.3e-01]
   [-8.8e-01 -6.8e-03 -7.9e-01]
   [-8.4e-01 -7.4e-02 -7.1e-01]
   [-8.7e-01 -2.5e-01 -7.2e-01]
   [-9.8e-01 -2.8e-01 -6.9e-01]
   [-1.1e+00 -2.6e-01 -7.2e-01]
   [-1.1e+00 -2.0e-01 -8.1e-01]
   [-1.1e+00 -1.3e-01 -8.9e-01]
   [-9.8e-01 -1.0e-01 -9.3e-01]
   [-8.7e-01 -1.3e-01 -8.9e-01]
   [-8.3e-01 -1.9e-01 -8.0e-01]
   [-8.7e-01 -3.8e-01 -8.1e-01]
   [-9.8e-01 -4.0e-01 -7.7e-01]
   [-1.1e+00 -3.7e-01 -8.0e-01]
   [-1.1e+00 -3.1e-01 -8.9e-01]
   [-1.1e+00 -2.5e-01 -9.8e-01]
   [-9.8e-01 -2.3e-01 -1.0e+00]
   [-8.7e-01 -2.6e-01 -9.8e-01]
   [-8.3e-01 -3.2e-01 -9.0e-01]
   [-8.9e-01 -5.1e-01 -8.9e-01]
   [-9.9e-01 -5.2e-01 -8.5e-01]
   [-1.1e+00 -4.9e-01 -8.8e-01]
   [-1.1e+00 -4.3e-01 -9.7e-01]
   [-1.1e+00 -3.8e-01 -1.1e+00]
   [-9.9e-01 -3.7e-01 -1.1e+00]
   [-8.9e-01 -4.0e-01 -1.1e+00]
   [-8.4e-01 -4.6e-01 -9.9e-01]
   [-9.1e-01 -6.3e-01 -9.6e-01]
   [-1.0e+00 -6.3e-01 -9.0e-01]
   [-1.1e+00 -5.9e-01 -9.3e-01]
   [-1.2e+00 -5.3e-01 -1.0e+00]
   [-1.1e+00 -5.0e-01 -1.1e+00]
   [-1.0e+00 -5.0e-01 -1.2e+00]
   [-9.2e-01 -5.4e-01 -1.1e+00]
   [-8.7e-01 -5.9e-01 -1.1e+00]
   [-9.5e-01 -7.5e-01 -1.0e+00]
   [-1.0e+00 -7.3e-01 -9.5e-01]
   [-1.2e+00 -6.9e-01 -9.7e-01]
   [-1.2e+00 -6.4e-01 -1.1e+00]
   [-1.2e+00 -6.1e-01 -1.2e+00]
   [-1.1e+00 -6.3e-01 -1.2e+00]
   [-9.6e-01 -6.8e-01 -1.2e+00]
   [-9.1e-01 -7.3e-01 -1.1e+00]
   [-1.0e+00 -8.9e-01 -1.0e+00]
   [-1.1e+00 -8.6e-01 -9.8e-01]
   [-1.2e+00 -8.0e-01 -1.0e+00]
   [-1.3e+00 -7.6e-01 -1.1e+00]
   [-1.2e+00 -7.5e-01 -1.2e+00]
   [-1.1e+00 -7.8e-01 -1.3e+00]
   [-1.0e+00 -8.3e-01 -1.2e+00]
   [-9.8e-01 -8.7e-01 -1.2e+00]
   [-1.1e+00 -1.0e+00 -1.1e+00]
   [-1.2e+00 -9.8e-01 -1.0e+00]
   [-1.3e+00 -9.2e-01 -1.0e+00]
   [-1.3e+00 -8.8e-01 -1.1e+00]
   [-1.3e+00 -8.8e-01 -1.2e+00]
   [-1.2e+00 -9.3e-01 -1.3e+00]
   [-1.1e+00 -9.8e-01 -1.3e+00]
   [-1.1e+00 -1.0e+00 -1.2e+00]
   [-1.2e+00 -1.1e+00 -1.1e+00]
   [-1.2e+00 -1.1e+00 -1.0e+00]
   [-1.3e+00 -1.0e+00 -1.0e+00]
   [-1.4e+00 -9.9e-01 -1.1e+00]
   [-1.4e+00 -1.0e+00 -1.2e+00]
   [-1.3e+00 -1.1e+00 -1.3e+00]
   [-1.2e+00 -1.1e+00 -1.3e+00]
   [-1.1e+00 -1.2e+00 -1.2e+00]
   [-1.2e+00 -1.3e+00 -1.1e+00]
   [-1.3e+00 -1.2e+00 -1.0e+00]
   [-1.4e+00 -1.1e+00 -1.0e+00]
   [-1.4e+00 -1.1e+00 -1.1e+00]
   [-1.4e+00 -1.1e+00 -1.2e+00]
   [-1.4e+00 -1.2e+00 -1.3e+00]
   [-1.3e+00 -1.2e+00 -1.3e+00]
   [-1.2e+00 -1.3e+00 -1.2e+00]
   [-1.4e+00 -1.4e+00 -1.0e+00]
   [-1.4e+00 -1.3e+00 -9.8e-01]
   [-1.5e+00 -1.2e+00 -1.0e+00]
   [-1.5e+00 -1.2e+00 -1.1e+00]
   [-1.5e+00 -1.2e+00 -1.2e+00]
   [-1.5e+00 -1.3e+00 -1.3e+00]
   [-1.4e+00 -1.4e+00 -1.3e+00]
   [-1.4e+00 -1.4e+00 -1.2e+00]
   [-1.5e+00 -1.5e+00 -1.0e+00]
   [-1.5e+00 -1.4e+00 -9.6e-01]
   [-1.6e+00 -1.3e+00 -9.9e-01]
   [-1.6e+00 -1.3e+00 -1.1e+00]
   [-1.7e+00 -1.3e+00 -1.2e+00]
   [-1.6e+00 -1.4e+00 -1.3e+00]
   [-1.5e+00 -1.5e+00 -1.2e+00]
   [-1.5e+00 -1.5e+00 -1.1e+00]
   [-1.6e+00 -1.5e+00 -9.9e-01]
   [-1.6e+00 -1.5e+00 -9.3e-01]
   [-1.7e+00 -1.4e+00 -9.6e-01]
   [-1.7e+00 -1.3e+00 -1.1e+00]
   [-1.8e+00 -1.4e+00 -1.2e+00]
   [-1.7e+00 -1.4e+00 -1.2e+00]
   [-1.7e+00 -1.5e+00 -1.2e+00]
   [-1.6e+00 -1.6e+00 -1.1e+00]
   [-1.7e+00 -1.6e+00 -9.5e-01]
   [-1.8e+00 -1.5e+00 -9.0e-01]
   [-1.8e+00 -1.4e+00 -9.3e-01]
   [-1.8e+00 -1.4e+00 -1.0e+00]
   [-1.9e+00 -1.4e+00 -1.1e+00]
   [-1.8e+00 -1.5e+00 -1.2e+00]
   [-1.8e+00 -1.6e+00 -1.2e+00]
   [-1.8e+00 -1.6e+00 -1.1e+00]
   [-1.9e+00 -1.6e+00 -9.1e-01]
   [-1.9e+00 -1.5e+00 -8.7e-01]
   [-1.9e+00 -1.4e+00 -9.0e-01]
   [-2.0e+00 -1.4e+00 -1.0e+00]
   [-2.0e+00 -1.4e+00 -1.1e+00]
   [-2.0e+00 -1.5e+00 -1.2e+00]
   [-2.0e+00 -1.6e+00 -1.1e+00]
   [-1.9e+00 -1.7e+00 -1.0e+00]
   [-2.1e+00 -1.7e+00 -8.8e-01]
   [-2.1e+00 -1.5e+00 -8.3e-01]
   [-2.1e+00 -1.4e+00 -8.7e-01]
   [-2.1e+00 -1.4e+00 -9.7e-01]
   [-2.1e+00 -1.4e+00 -1.1e+00]
   [-2.2e+00 -1.5e+00 -1.1e+00]
   [-2.1e+00 -1.6e+00 -1.1e+00]
   [-2.1e+00 -1.7e+00 -9.8e-01]
   [-2.3e+00 -1.6e+00 -8.4e-01]
   [-2.3e+00 -1.5e+00 -7.9e-01]
   [-2.3e+00 -1.4e+00 -8.3e-01]
   [-2.3e+00 -1.4e+00 -9.4e-01]
   [-2.3e+00 -1.4e+00 -1.0e+00]
   [-2.4e+00 -1.5e+00 -1.1e+00]
   [-2.4e+00 -1.6e+00 -1.0e+00]
   [-2.3e+00 -1.7e+00 -9.4e-01]
   [-2.5e+00 -1.6e+00 -8.0e-01]
   [-2.5e+00 -1.5e+00 -7.5e-01]
   [-2.5e+00 -1.4e+00 -8.0e-01]
   [-2.5e+00 -1.4e+00 -9.0e-01]
   [-2.5e+00 -1.4e+00 -1.0e+00]
   [-2.5e+00 -1.5e+00 -1.0e+00]
   [-2.6e+00 -1.6e+00 -1.0e+00]
   [-2.5e+00 -1.7e+00 -9.0e-01]
   [-2.7e+00 -1.6e+00 -7.6e-01]
   [-2.7e+00 -1.5e+00 -7.2e-01]
   [-2.7e+00 -1.4e+00 -7.6e-01]
   [-2.7e+00 -1.3e+00 -8.7e-01]
   [-2.7e+00 -1.4e+00 -9.7e-01]
   [-2.7e+00 -1.5e+00 -1.0e+00]
   [-2.7e+00 -1.6e+00 -9.7e-01]
   [-2.7e+00 -1.6e+00 -8.7e-01]
   [-2.0e+00 -7.8e-01 -4.7e-01]
   [-2.2e+00 -1.0e+00 -3.8e-01]
   [-2.3e+00 -1.0e+00 -4.6e-01]
   [-2.1e+00 -7.4e-01 -5.4e-01]
   [-2.3e+00 -3.9e-01  4.8e-02]
   [-2.5e+00 -6.5e-01  1.3e-01]
   [-2.6e+00 -6.0e-01  5.7e-02]
   [-2.4e+00 -3.4e-01 -2.5e-02]
   [-1.8e+00 -7.5e-01 -2.4e-01]
   [-1.9e+00 -1.1e+00 -3.9e-01]
   [-1.9e+00 -1.0e+00 -4.4e-01]
   [-1.9e+00 -7.0e-01 -2.9e-01]
   [-2.2e+00 -8.9e-01  3.0e-01]
   [-2.3e+00 -1.2e+00  1.6e-01]
   [-2.4e+00 -1.2e+00  1.1e-01]
   [-2.3e+00 -8.4e-01  2.5e-01]
   [-1.5e+00 -9.4e-01 -2.5e-01]
   [-1.4e+00 -1.2e+00 -4.1e-01]
   [-1.5e+00 -1.2e+00 -4.6e-01]
   [-1.6e+00 -9.2e-01 -3.1e-01]
   [-1.8e+00 -1.3e+00  2.6e-01]
   [-1.8e+00 -1.6e+00  1.0e-01]
   [-1.9e+00 -1.6e+00  4.4e-02]
   [-1.9e+00 -1.3e+00  2.0e-01]
   [-1.2e+00 -8.8e-01 -1.6e-01]
   [-1.0e+00 -1.1e+00 -4.1e-01]
   [-1.1e+00 -1.1e+00 -4.7e-01]
   [-1.3e+00 -8.8e-01 -2.2e-01]
   [-1.4e+00 -1.5e+00  1.5e-01]
   [-1.2e+00 -1.7e+00 -1.0e-01]
   [-1.3e+00 -1.7e+00 -1.6e-01]
   [-1.5e+00 -1.5e+00  9.3e-02]
   [-9.4e-01 -7.5e-01 -2.3e-02]
   [-7.7e-01 -7.4e-01 -3.3e-01]
   [-8.6e-01 -7.7e-01 -3.8e-01]
   [-1.0e+00 -7.7e-01 -7.9e-02]
   [-8.2e-01 -1.4e+00  3.8e-02]
   [-6.4e-01 -1.4e+00 -2.7e-01]
   [-7.3e-01 -1.5e+00 -3.2e-01]
   [-9.1e-01 -1.5e+00 -1.8e-02]
   [-9.2e-01 -7.8e-01  1.9e-01]
   [-8.1e-01 -5.6e-01 -5.7e-02]
   [-8.6e-01 -6.2e-01 -1.4e-01]
   [-9.8e-01 -8.4e-01  1.2e-01]
   [-3.6e-01 -1.2e+00  1.0e-01]
   [-2.4e-01 -9.6e-01 -1.5e-01]
   [-3.0e-01 -1.0e+00 -2.3e-01]
   [-4.1e-01 -1.2e+00  2.4e-02]
   [ 4.4e-01 -3.9e-01  4.4e-01]
   [ 5.4e-01 -6.1e-01  7.0e-01]
   [ 6.1e-01 -6.6e-01  6.2e-01]
   [ 5.1e-01 -4.4e-01  3.7e-01]
   [-9.7e-02 -8.1e-01  2.9e-01]
   [ 4.0e-03 -1.0e+00  5.5e-01]
   [ 6.9e-02 -1.1e+00  4.7e-01]
   [-3.1e-02 -8.7e-01  2.1e-01]
   [-2.1e-01 -1.5e+00  8.0e-01]
   [-5.2e-01 -1.5e+00  9.5e-01]
   [-5.5e-01 -1.6e+00  8.5e-01]
   [-2.4e-01 -1.5e+00  7.1e-01]
   [-4.6e-01 -8.4e-01  5.8e-01]
   [-7.7e-01 -9.2e-01  7.3e-01]
   [-8.1e-01 -9.7e-01  6.3e-01]
   [-4.9e-01 -8.9e-01  4.8e-01]
   [-5.9e-01 -1.3e-01  4.1e-01]
   [-8.0e-01  1.1e-01  5.5e-01]
   [-7.4e-01  1.1e-01  6.5e-01]
   [-5.3e-01 -1.3e-01  5.0e-01]
   [-1.0e+00 -6.3e-01  6.7e-01]
   [-1.2e+00 -3.9e-01  8.2e-01]
   [-1.1e+00 -3.9e-01  9.1e-01]
   [-9.4e-01 -6.4e-01  7.7e-01]
   [-7.0e-01 -2.7e-01  1.2e-01]
   [-6.9e-01  8.0e-02  1.4e-01]
   [-6.4e-01  7.2e-02  2.4e-01]
   [-6.5e-01 -2.8e-01  2.2e-01]
   [-1.3e+00 -2.7e-01  4.5e-01]
   [-1.3e+00  8.1e-02  4.7e-01]
   [-1.3e+00  7.3e-02  5.7e-01]
   [-1.3e+00 -2.8e-01  5.4e-01]
   [-8.1e-01 -4.3e-01 -1.4e-01]
   [-6.1e-01 -1.6e-01 -2.5e-01]
   [-5.7e-01 -1.5e-01 -1.4e-01]
   [-7.7e-01 -4.2e-01 -3.6e-02]
   [-1.3e+00  2.5e-02  1.9e-02]
   [-1.1e+00  2.9e-01 -9.0e-02]
   [-1.1e+00  3.0e-01  1.5e-02]
   [-1.3e+00  3.6e-02  1.2e-01]
   [-1.1e+00 -6.0e-01 -2.6e-01]
   [-8.5e-01 -6.2e-01 -4.5e-01]
   [-7.9e-01 -5.8e-01 -3.6e-01]
   [-1.1e+00 -5.6e-01 -1.7e-01]
   [-1.2e+00  7.3e-02 -4.5e-01]
   [-9.2e-01  5.1e-02 -6.4e-01]
   [-8.6e-01  8.4e-02 -5.5e-01]
   [-1.2e+00  1.1e-01 -3.6e-01]
   [-1.5e+00 -5.7e-01 -4.2e-01]
   [-1.3e+00 -8.5e-01 -4.9e-01]
   [-1.2e+00 -8.2e-01 -4.1e-01]
   [-1.4e+00 -5.4e-01 -3.4e-01]
   [-1.1e+00 -2.0e-01 -9.0e-01]
   [-9.1e-01 -4.7e-01 -9.7e-01]
   [-8.4e-01 -4.4e-01 -8.9e-01]
   [-1.0e+00 -1.6e-01 -8.2e-01]
   [-1.6e+00 -7.0e-01 -6.0e-01]
   [-1.5e+00 -1.0e+00 -5.4e-01]
   [-1.4e+00 -9.8e-01 -4.8e-01]
   [-1.5e+00 -6.5e-01 -5.4e-01]
   [-1.2e+00 -6.8e-01 -1.2e+00]
   [-1.1e+00 -1.0e+00 -1.1e+00]
   [-1.0e+00 -9.6e-01 -1.1e+00]
   [-1.1e+00 -6.3e-01 -1.1e+00]
   [-1.8e+00 -7.9e-01 -7.7e-01]
   [-1.9e+00 -1.1e+00 -5.8e-01]
   [-1.8e+00 -1.1e+00 -5.2e-01]
   [-1.7e+00 -7.6e-01 -7.1e-01]
   [-1.5e+00 -1.1e+00 -1.3e+00]
   [-1.5e+00 -1.4e+00 -1.1e+00]
   [-1.4e+00 -1.4e+00 -1.0e+00]
   [-1.4e+00 -1.1e+00 -1.2e+00]
   [-2.1e+00 -8.9e-01 -7.3e-01]
   [-2.3e+00 -1.1e+00 -5.2e-01]
   [-2.2e+00 -1.1e+00 -4.6e-01]
   [-2.1e+00 -9.0e-01 -6.7e-01]
   [-1.9e+00 -1.4e+00 -1.1e+00]
   [-2.1e+00 -1.6e+00 -9.3e-01]
   [-2.0e+00 -1.7e+00 -8.7e-01]
   [-1.8e+00 -1.4e+00 -1.1e+00]
   [-2.2e+00 -7.9e-01 -1.1e+00]
   [-2.4e+00 -7.4e-01 -7.7e-01]
   [-2.3e+00 -7.7e-01 -7.1e-01]
   [-2.2e+00 -8.2e-01 -1.0e+00]
   [-2.5e+00 -1.5e+00 -1.1e+00]
   [-2.6e+00 -1.4e+00 -7.9e-01]
   [-2.6e+00 -1.4e+00 -7.3e-01]
   [-2.4e+00 -1.5e+00 -1.0e+00]]
# ---
# name: test_selection_working[chain_id-8U8W]
  tuple(
    12226,
    3,
  )
# ---
# name: test_selection_working[chain_id-8U8W].1
  [[-2.2  1.6  2.1]
   [-2.1  1.5  2.1]
   [-2.3  1.3  2.0]
   ...
   [-4.0 -2.5  1.7]
   [-4.0 -2.5  1.7]
   [-4.0 -2.5  1.7]]
# ---
# name: test_selection_working[entity_id-1BNA]
  tuple(
    912,
    3,
  )
# ---
# name: test_selection_working[entity_id-1BNA].1
  [[2.1 3.5 2.3]
   [2.1 3.5 2.4]
   [2.0 3.4 2.5]
   ...
   [2.0 2.0 3.0]
   [2.0 1.9 2.9]
   [1.6 1.9 3.0]]
# ---
# name: test_selection_working[entity_id-1BNA].2
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-1BNA].3
  []
# ---
# name: test_selection_working[entity_id-4ozs]
  tuple(
    6680,
    3,
  )
# ---
# name: test_selection_working[entity_id-4ozs].1
  [[ 4.2  1.2 -1.6]
   [ 4.2  1.3 -1.6]
   [ 3.9  1.3 -1.8]
   ...
   [ 3.6 -1.4  2.5]
   [ 3.6 -1.4  2.5]
   [ 3.6 -1.4  2.5]]
# ---
# name: test_selection_working[entity_id-4ozs].2
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-4ozs].3
  []
# ---
# name: test_selection_working[entity_id-8H1B]
  tuple(
    17040,
    3,
  )
# ---
# name: test_selection_working[entity_id-8H1B].1
  [[ 0.7  0.4  2.8]
   [ 0.7  0.4  2.7]
   [ 0.7  0.2  3.0]
   ...
   [ 2.4 -2.5  2.6]
   [ 2.3 -2.5  2.6]
   [ 2.3 -2.5  2.6]]
# ---
# name: test_selection_working[entity_id-8H1B].2
  tuple(
    1312,
    3,
  )
# ---
# name: test_selection_working[entity_id-8H1B].3
  [[ 1.0 -1.2  5.1]
   [ 1.0 -1.2  5.2]
   [ 1.0 -1.2  5.3]
   ...
   [-2.6 -1.4 -0.8]
   [-2.6 -1.4 -0.7]
   [-2.4 -1.5 -1.0]]
# ---
# name: test_selection_working[entity_id-8H1B].4
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8H1B].5
  []
# ---
# name: test_selection_working[entity_id-8H1B].6
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8H1B].7
  []
# ---
# name: test_selection_working[entity_id-8H1B].8
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8H1B].9
  []
# ---
# name: test_selection_working[entity_id-8U8W]
  tuple(
    12226,
    3,
  )
# ---
# name: test_selection_working[entity_id-8U8W].1
  [[-2.2  1.6  2.1]
   [-2.1  1.5  2.1]
   [-2.3  1.3  2.0]
   ...
   [-4.0 -2.5  1.7]
   [-4.0 -2.5  1.7]
   [-4.0 -2.5  1.7]]
# ---
# name: test_selection_working[entity_id-8U8W].10
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8U8W].11
  []
# ---
# name: test_selection_working[entity_id-8U8W].12
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8U8W].13
  []
# ---
# name: test_selection_working[entity_id-8U8W].2
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8U8W].3
  []
# ---
# name: test_selection_working[entity_id-8U8W].4
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8U8W].5
  []
# ---
# name: test_selection_working[entity_id-8U8W].6
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8U8W].7
  []
# ---
# name: test_selection_working[entity_id-8U8W].8
  tuple(
    0,
    3,
  )
# ---
# name: test_selection_working[entity_id-8U8W].9
  []
# ---
